--- a/data/cards/20212491.yaml
+++ b/data/cards/20212491.yaml
@@ -1,7 +1,7 @@
 konami_id: 18009
 password: 20212491
 name:
-  en: Stray Purery Street
+  en: Stray Purrely Street
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 皮儿利迷路的大街
 text:
   en: |-
-    Your opponent cannot target "Purery" monsters you control with card effects during the turn they were Special Summoned. Once per turn, if a face-up "Purery" Xyz Monster(s) you control leaves the field by an opponent's card: Special Summon 1 Level 1 "Purery" monster from your Deck or GY. Once per turn, during the End Phase: You can target 1 "Purery" Xyz Monster on the field; attach 1 "Purery" Quick-Play Spell from your Deck or GY to it as material.
+    Your opponent cannot target "Purrely" monsters you control with card effects during the turn they were Special Summoned. Once per turn, if a face-up "Purrely" Xyz Monster(s) you control leaves the field by an opponent's card: Special Summon 1 Level 1 "Purrely" monster from your Deck or GY. Once per turn, during the End Phase: You can target 1 "Purrely" Xyz Monster on the field; attach 1 "Purrely" Quick-Play Spell from your Deck or GY to it as material.
   de:
   es:
   fr:
@@ -30,7 +30,7 @@ text:
 card_type: Spell
 property: Field
 series:
-- Purery
+- Purrely
 sets:
   ja:
   - set_number: DBAD-JP019
