--- a/data/cards/29599813.yaml
+++ b/data/cards/29599813.yaml
@@ -1,7 +1,7 @@
 konami_id: 18012
 password: 29599813
 name:
-  en: Purery Pretty Memory
+  en: Purrely Pretty Memory
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 皮儿利的美丽回忆
 text:
   en: |-
-    Each player gains 1000 LP, then you can discard 1 card, and if you do, Special Summon 1 Level 1 "Purery" monster from your Deck. A "Purery" Xyz Monster that has this card as material gains this effect.
+    Each player gains 1000 LP, then you can discard 1 card, and if you do, Special Summon 1 Level 1 "Purrely" monster from your Deck. A "Purrely" Xyz Monster that has this card as material gains this effect.
     ● Once per turn: You can send 1 other card you control to the GY, then target 1 card your opponent controls; attach it to this card as material.
   de:
   es:
@@ -32,7 +32,7 @@ text:
 card_type: Spell
 property: Quick-Play
 series:
-- Purery
+- Purrely
 sets:
   ja:
   - set_number: DBAD-JP022
