--- a/data/cards/52645235.yaml
+++ b/data/cards/52645235.yaml
@@ -1,7 +1,7 @@
 konami_id: 18004
 password: 52645235
 name:
-  en: Epurery Happiness
+  en: Epurrely Happiness
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 2 monsters
-    At the end of the Damage Step, if this card battled: You can add 1 "Purery" card from your Deck to your hand, also if this card has "Purery Happy Memory" as material, you can halve the ATK of 1 face-up monster on the field. Thrice per turn, when you activate a "Purery" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can return 1 Spell/Trap your opponent controls to the hand.
+    At the end of the Damage Step, if this card battled: You can add 1 "Purrely" card from your Deck to your hand, also if this card has "Purrely Happy Memory" as material, you can halve the ATK of 1 face-up monster on the field. Thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can return 1 Spell/Trap your opponent controls to the hand.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ rank: 2
 atk: 2000
 def: 100
 series:
-- Purery
+- Purrely
 sets:
   ja:
   - set_number: DBAD-JP014
