--- a/data/cards/55584558.yaml
+++ b/data/cards/55584558.yaml
@@ -1,7 +1,7 @@
 konami_id: 18013
 password: 55584558
 name:
-  en: Purery Delicious Memory
+  en: Purrely Delicious Memory
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 皮儿利的美味回忆
 text:
   en: |-
-    Make 1 monster on the field unable to be destroyed by battle (until the end of the next turn), then you can discard 1 card, and if you do, Special Summon 1 Level 1 "Purery" monster from your Deck. A "Purery" Xyz Monster that has this card as material gains this effect.
+    Make 1 monster on the field unable to be destroyed by battle (until the end of the next turn), then you can discard 1 card, and if you do, Special Summon 1 Level 1 "Purrely" monster from your Deck. A "Purrely" Xyz Monster that has this card as material gains this effect.
     ● Gains 300 ATK/DEF for each material attached to it.
   de:
   es:
@@ -31,7 +31,7 @@ text:
 card_type: Spell
 property: Quick-Play
 series:
-- Purery
+- Purrely
 sets:
   ja:
   - set_number: DBAD-JP023
