--- a/data/cards/56700100.yaml
+++ b/data/cards/56700100.yaml
@@ -1,7 +1,7 @@
 konami_id: 18010
 password: 56700100
 name:
-  en: Purery, My Friend
+  en: Purrely, My Friend
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 皮儿利我的朋友
 text:
   en: |-
-    You can pay 500 LP; reveal 3 "Purery" cards from your Deck, except "Purery, My Friend", your opponent randomly picks 1 for you to add to your hand, and you shuffle the rest back into the Deck. If a face-up "Purery" Xyz Monster(s) you control leaves the field by an opponent's card (even during the Damage Step): You can add up to 3 "Purery" Quick-Play Spells with different names from your GY to your hand. You can only use each effect of "Purery, My Friend" once per turn.
+    You can pay 500 LP; reveal 3 "Purrely" cards from your Deck, except "Purrely, My Friend", your opponent randomly picks 1 for you to add to your hand, and you shuffle the rest back into the Deck. If a face-up "Purrely" Xyz Monster(s) you control leaves the field by an opponent's card (even during the Damage Step): You can add up to 3 "Purrely" Quick-Play Spells with different names from your GY to your hand. You can only use each effect of "Purrely, My Friend" once per turn.
   de:
   es:
   fr:
@@ -30,7 +30,7 @@ text:
 card_type: Spell
 property: Continuous
 series:
-- Purery
+- Purrely
 sets:
   ja:
   - set_number: DBAD-JP020
