--- a/data/cards/82105704.yaml
+++ b/data/cards/82105704.yaml
@@ -1,7 +1,7 @@
 konami_id: 18011
 password: 82105704
 name:
-  en: Purery Happy Memory
+  en: Purrely Happy Memory
   de:
   es:
   fr:
@@ -15,8 +15,8 @@ name:
   zh-CN: 皮儿利的快乐回忆
 text:
   en: |-
-    Apply this effect to 1 card on the field (until the end of the next turn), then you can discard 1 card, and if you do, Special Summon 1 Level 1 "Purery" monster from your Deck. Once applied, the next time that card would be destroyed by card effect, it is not destroyed. A "Purery" Xyz Monster that has this card as material gains this effect.
-    ● This card can attack monsters a number of times each Battle Phase, up to the number of "Purery Happy Memory" attached to it +1.
+    Apply this effect to 1 card on the field (until the end of the next turn), then you can discard 1 card, and if you do, Special Summon 1 Level 1 "Purrely" monster from your Deck. Once applied, the next time that card would be destroyed by card effect, it is not destroyed. A "Purrely" Xyz Monster that has this card as material gains this effect.
+    ● This card can attack monsters a number of times each Battle Phase, up to the number of "Purrely Happy Memory" attached to it +1.
   de:
   es:
   fr:
@@ -31,7 +31,7 @@ text:
 card_type: Spell
 property: Quick-Play
 series:
-- Purery
+- Purrely
 sets:
   ja:
   - set_number: DBAD-JP021
