--- a/data/cards/82983267.yaml
+++ b/data/cards/82983267.yaml
@@ -1,7 +1,7 @@
 konami_id: 18014
 password: 82983267
 name:
-  en: Purery Leap!?
+  en: Purrely Leap!?
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 皮儿利跳越！？
 text:
   en: |-
-    Target 1 "Purery" Xyz Monster you control; Special Summon from your Extra Deck, 1 "Purery" Xyz Monster with a different Rank than that monster you control, by using it as material, but return it to the Extra Deck during the End Phase of the next turn. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) You can banish this card from your GY, then target up to 3 "Purery" monsters in your GY; shuffle them into the Deck. You can only activate 1 "Purery Leap!?" per turn.
+    Target 1 "Purrely" Xyz Monster you control; Special Summon from your Extra Deck, 1 "Purrely" Xyz Monster with a different Rank than that monster you control, by using it as material, but return it to the Extra Deck during the End Phase of the next turn. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) You can banish this card from your GY, then target up to 3 "Purrely" monsters in your GY; shuffle them into the Deck. You can only activate 1 "Purrely Leap!?" per turn.
   de:
   es:
   fr:
@@ -30,7 +30,7 @@ text:
 card_type: Trap
 property: Normal
 series:
-- Purery
+- Purrely
 sets:
   ja:
   - set_number: DBAD-JP024
