--- a/data/cards/83827392.yaml
+++ b/data/cards/83827392.yaml
@@ -1,7 +1,7 @@
 konami_id: 18008
 password: 83827392
 name:
-  en: Expurery Noir
+  en: Expurrely Noir
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 7 monsters
-    You can also Xyz Summon this card by using 1 Rank 2 monster you control with 5 or more materials. (Transfer its materials to this card.) This card with 5 or more materials is unaffected by your opponent's activated effects. You can detach 2 materials from this card, then target 1 card your opponent controls or in their GY; place it on the bottom of the Deck. This is a Quick Effect if this card has a Level 1 "Purery" monster as material.
+    You can also Xyz Summon this card by using 1 Rank 2 monster you control with 5 or more materials. (Transfer its materials to this card.) This card with 5 or more materials is unaffected by your opponent's activated effects. You can detach 2 materials from this card, then target 1 card your opponent controls or in their GY; place it on the bottom of the Deck. This is a Quick Effect if this card has a Level 1 "Purrely" monster as material.
   de:
   es:
   fr:
@@ -38,7 +38,7 @@ rank: 7
 atk: 1100
 def: 2800
 series:
-- Purery
+- Purrely
 sets:
   ja:
   - set_number: DBAD-JP018
