--- a/data/cards/98049934.yaml
+++ b/data/cards/98049934.yaml
@@ -1,7 +1,7 @@
 konami_id: 18005
 password: 98049934
 name:
-  en: Epurery Beauty
+  en: Epurrely Beauty
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 2 monsters
-    Once per turn: You can target 1 Effect Monster your opponent controls; negate its effects until the end of this turn. This is a Quick Effect if this card has "Purery Pretty Memory" as material. Thrice per turn, when you activate a "Purery" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can change the battle position of 1 monster your opponent controls.
+    Once per turn: You can target 1 Effect Monster your opponent controls; negate its effects until the end of this turn. This is a Quick Effect if this card has "Purrely Pretty Memory" as material. Thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can change the battle position of 1 monster your opponent controls.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ rank: 2
 atk: 1600
 def: 1100
 series:
-- Purery
+- Purrely
 sets:
   ja:
   - set_number: DBAD-JP015
