--- a/data/cards/13140300.yaml
+++ b/data/cards/13140300.yaml
@@ -32,7 +32,7 @@ text:
     수수께끼의 각인이 새겨진 성스러운 유물. 신에 필적하는 힘을 가진 용의 힘을 봉인한 것이라고 전해지고 있다. 황금의 태양 아래, 유구한 시간을 거쳐, 그것은 이윽고 성스러운 태양석으로 불리게 되었다.
   zh-TW:
   zh-CN: |-
-    被刻有神秘刻印的神圣古物。传说是将施展如神一般的力量之龙的力量封印之物。在黄金太阳之下，经历悠久的时光，后来随着其神圣性被称为太阳石。
+    刻有谜之刻印的神圣遗物。传说其中封印着能施展如神般力量的龙之力。在黄金色的太阳下，历经悠久的时光，散发的神圣光辉使其最终被称为太阳石。
 card_type: Monster
 monster_type_line: Dragon
 attribute: LIGHT
@@ -75,6 +75,11 @@ sets:
   ko:
   - set_number: GAOV-KR002
     set_name: Galactic Overlord
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC132
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
