--- a/data/cards/63995093.yaml
+++ b/data/cards/63995093.yaml
@@ -300,6 +300,10 @@ sets:
     set_name: Entry Pack Volume 5
     rarities:
     - Common
+  - set_number: TM01-SC094
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
