--- a/data/cards/77901552.yaml
+++ b/data/cards/77901552.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성각룡－토페니 드래곤
   ko_rr:
   zh-TW:
-  zh-CN: 圣刻龙-泰芙龙
+  zh-CN: 圣刻龙－泰芙努龙
 text:
   en: |-
     If only your opponent controls a monster, you can Special Summon this card (from your hand). Cannot attack during the turn it is Special Summoned this way. When this card is Tributed: Special Summon 1 Dragon Normal Monster from your hand, Deck, or GY, and make its ATK/DEF 0.
@@ -32,7 +32,7 @@ text:
     ①: 상대 필드에만 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. 이 방법으로 특수 소환한 턴에, 이 카드는 공격할 수 없다. ②: 이 카드가 릴리스되었을 경우에 발동한다. 자신의 패 / 덱 / 묘지에서 드래곤족 일반 몬스터 1장을 고르고, 공격력 / 수비력을 0 으로 하여 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：只有对方场上才有怪兽存在的场合，这张卡可以从手卡特殊召唤。这个方法特殊召唤的回合，这张卡不能攻击。②：这张卡被解放的场合发动。从自己的手卡·卡组·墓地选1只龙族的通常怪兽，攻击力·守备力变成0特殊召唤。
+    ①：仅有对手场上才存在怪兽的情况下，此卡可从手牌中特殊召唤。以此方法特殊召唤的回合，此卡不可攻击。②：此卡被解放的情况下发动。从自己的手牌・牌组・墓地挑选1只龙族通常怪兽，将其攻击力・守备力改成0并特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -165,6 +165,11 @@ sets:
     set_name: LINK VRAINS Pack
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC138
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
