--- a/data/cards/36776089.yaml
+++ b/data/cards/36776089.yaml
@@ -125,6 +125,12 @@ sets:
     set_name: Tournament Pack 2021 Vol.3
     rarities:
     - Common
+  - set_number: SLF1-JP091
+    set_name: Selection 5
+    rarities:
+    - Common
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: SECE-KR052
     set_name: Secrets of Eternity
