--- a/data/cards/25377819.yaml
+++ b/data/cards/25377819.yaml
@@ -32,7 +32,7 @@ text:
     ①: 덱에서 "성각" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：从卡组把1只「圣刻」怪兽加入手卡。
+    ①：从牌组将1只"圣刻"怪兽加入手牌。
 card_type: Spell
 property: Normal
 series:
@@ -97,6 +97,11 @@ sets:
     set_name: LINK VRAINS Pack
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC145
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
