--- a/data/cards/35726888.yaml
+++ b/data/cards/35726888.yaml
@@ -226,6 +226,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Extra Secret Rare
+  - set_number: TM01-SC098
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
