--- a/data/cards/14212201.yaml
+++ b/data/cards/14212201.yaml
@@ -8,7 +8,7 @@ name:
   it: Vampiro Ombra
   pt: Sombra Vampiro
   ja: シャドウ・ヴァンパイア
-  ja_romaji: Shadō Vanpaia
+  ja_romaji: Shadou Vanpaia
   ko: 섀도우 뱀파이어
   ko_rr:
   zh-TW:
