--- a/data/cards/49161188.yaml
+++ b/data/cards/49161188.yaml
@@ -8,7 +8,7 @@ name:
   it: Gilti-Gearfried il Cavaliere d'Acciaio Magico
   pt: Gilti-Gearfried, o Cavaleiro de Aço Mágico
   ja: <ruby>鋼<rt>こう</rt></ruby><ruby>鉄<rt>てつ</rt></ruby>の<ruby>魔<rt>ま</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>－ギルティギア・フリード
-  ja_romaji: Kōtetsu no Madō Kishi - Giruti Gia Furīdo
+  ja_romaji: Kōtetsu no Madōkishi - Giruti Gia Furīdo
   ko: 강철의 마도 기사-길티기어프리드
   ko_rr: Meosineojeu-ui Choejeonseon
   zh-TW:
