--- a/data/cards/kdb4999.yaml
+++ b/data/cards/kdb4999.yaml
@@ -91,7 +91,7 @@ sets:
   - set_number: KICO-EN063
     set_name: King's Court
     rarities:
-    - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: JUMP-EN061
     set_name: Weekly Shonen Jump Alpha July 2012 membership promotional card
     rarities:
@@ -145,6 +145,10 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Ultra Rare
+  - set_number: KICO-DE063
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: BP02-FR127
     set_name: 'Battle Pack 2: War of the Giants'
@@ -190,6 +194,10 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Ultra Rare
+  - set_number: KICO-FR063
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: BP02-IT127
     set_name: 'Battle Pack 2: War of the Giants'
@@ -235,6 +243,10 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Ultra Rare
+  - set_number: KICO-IT063
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: BP02-PT127
     set_name: 'Battle Pack 2: War of the Giants'
@@ -276,6 +288,10 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Ultra Rare
+  - set_number: KICO-PT063
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: VJMP-JP064
     set_name: V Jump February 2012 promotional card
