--- a/data/cards/kdb4998.yaml
+++ b/data/cards/kdb4998.yaml
@@ -96,7 +96,7 @@ sets:
   - set_number: KICO-EN064
     set_name: King's Court
     rarities:
-    - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: JUMP-EN037
     set_name: Shonen Jump Vol. 8, Issue 1 promotional card
     rarities:
@@ -155,6 +155,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Ultra Rare
+  - set_number: KICO-DE064
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: GLD4-FR030
     set_name: 'Gold Series 4: Pyramids Edition'
@@ -197,6 +201,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Ultra Rare
+  - set_number: KICO-FR064
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: GLD4-IT030
     set_name: 'Gold Series 4: Pyramids Edition'
@@ -247,6 +255,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Ultra Rare
+  - set_number: KICO-IT064
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: BP02-PT125
     set_name: 'Battle Pack 2: War of the Giants'
@@ -280,6 +292,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Ultra Rare
+  - set_number: KICO-PT064
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: VJMP-JP037
     set_name: V Jump February 2009 promotional card
