--- a/data/cards/kdb5000.yaml
+++ b/data/cards/kdb5000.yaml
@@ -77,7 +77,7 @@ sets:
   - set_number: KICO-EN065
     set_name: King's Court
     rarities:
-    - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: JUMP-EN045
     set_name: Shonen Jump Vol. 9, Issue 1 promotional card
     rarities:
@@ -116,6 +116,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Secret Rare
+  - set_number: KICO-DE065
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: ORCS-FRSE2
     set_name: 'Order of Chaos: Special Edition'
@@ -146,6 +150,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Secret Rare
+  - set_number: KICO-FR065
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: YGMU-IT002
     set_name: Yu-Gi-Oh! The Official Magazine Issue 2 promotional card
@@ -180,6 +188,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Secret Rare
+  - set_number: KICO-IT065
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: BP02-PT126
     set_name: 'Battle Pack 2: War of the Giants'
@@ -202,6 +214,10 @@ sets:
     rarities:
     - Ultra Rare
     - Ghost Rare
+  - set_number: KICO-PT065
+    set_name: King's Court
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: VJMP-JP046
     set_name: V Jump February 2010 promotional card
