--- a/data/cards/90846359.yaml
+++ b/data/cards/90846359.yaml
@@ -32,7 +32,7 @@ text:
     양쪽 플레이어는 각각 종족이 1종류가 되도록, 필드 위의 각자의 몬스터를 묘지로 보낸다. 이 카드가 존재하는 한,서로 각자의 필드 위에 낼 수 있는 몬스터의 종족은 각각 1종류만이 된다.
   zh-TW:
   zh-CN: |-
-    ①：只要此卡存在于魔法与陷阱区域，双方场上各自仅可有1种种族的怪兽以表侧表示存在。双方玩家自身场上的表侧表示怪兽种族有2种以上的情况下，必须将怪兽送至墓地，直至只剩1种为止。
+    ①：只要此卡存在于魔法与陷阱区域，双方场上各自仅可有1种种族的怪兽以表侧表示存在。双方玩家自身场上的表侧表示怪兽的种族有2种以上的情况下，必须将怪兽送至墓地，直至只剩1种为止。
 card_type: Trap
 property: Continuous
 sets:
@@ -179,6 +179,10 @@ sets:
     set_name: Starter Deck 2021 Special Pack
     rarities:
     - Super Rare
+  - set_number: TM01-SC100
+    set_name: 'Theme Pack: War of Infinite Machine'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
