--- a/data/cards/27337596.yaml
+++ b/data/cards/27337596.yaml
@@ -12,7 +12,7 @@ name:
   ko: 성각용왕－아툼스
   ko_rr:
   zh-TW:
-  zh-CN: 圣刻龙王-阿图姆龙王
+  zh-CN: 圣刻龙王－亚图姆斯
 text:
   en: |-
     2 Level 6 Dragon monsters
@@ -40,8 +40,8 @@ text:
     ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 덱에서 드래곤족 몬스터 1장을 고르고, 공격력 / 수비력을 0 으로 하여 특수 소환한다. 이 효과를 발동하는 턴에, 이 카드는 공격할 수 없다.
   zh-TW:
   zh-CN: |-
-    龙族6星怪兽×2
-    ①：1回合1次，把这张卡1个XYZ素材取除才能发动。从卡组选1只龙族怪兽，攻击力·守备力变成0特殊召唤。这个效果发动的回合，这张卡不能攻击。
+    龙族等级6怪兽×2
+    ①：1回合1次，去除此卡的1个超量素材可以发动。从牌组挑选1只龙族怪兽，将其攻击力・守备力改成0并特殊召唤。发动此效果的回合中，此卡不可攻击。
 card_type: Monster
 monster_type_line: Dragon / Xyz / Effect
 attribute: LIGHT
@@ -131,6 +131,11 @@ sets:
     set_name: LINK VRAINS Pack
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC142
+    set_name: Classic Pack 02
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
