--- a/data/cards/47297616.yaml
+++ b/data/cards/47297616.yaml
@@ -32,7 +32,7 @@ text:
     이 카드는 특수 소환할 수 없다. 이 카드의 속성은 "어둠" 으로도 취급한다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 효과 몬스터의 효과 / 마법 / 함정 카드의 발동을 무효로 한다. 이 효과로 카드의 발동을 무효로 할 때마다, 이 카드의 공격력과 수비력은 500 포인트 내린다. 이 카드가 파괴되어 묘지로 보내졌을 때, 자신의 묘지에 존재하는 몬스터 1장을 선택하고 발동한다. 자신 필드 위의 카드를 전부 파괴한다. 선택한 몬스터 1장을 자신 필드 위에 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这张卡不能特殊召唤。这张卡的属性也当作「暗」使用。只要这张卡在场上表侧表示存在，效果怪兽的效果·魔法·陷阱卡的发动无效。每次这个效果让卡的发动无效，这张卡的攻击力和守备力下降500。这张卡被破坏送去墓地时，选择自己墓地存在的1只怪兽发动。自己场上的卡全部破坏。选择的1只怪兽在自己场上特殊召唤。
+    此卡不可特殊召唤。此卡的②效果在同一连锁上仅可发动1次。①：场上此卡的属性也视为“暗”。②：怪兽的效果・魔法・陷阱卡发动时发动。此卡的攻击力和守备力为５００以上的情况下，将其发动无效，此卡的攻击力・守备力下降５００。③：此卡被破坏并被送至墓地的情况下，以自己墓地的1只怪兽为对象发动。将自己场上的卡全部破坏，将对象怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
@@ -118,6 +118,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL02-SC181
+    set_name: Classic Pack 02
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
