--- a/data/cards/07913375.yaml
+++ b/data/cards/07913375.yaml
@@ -32,8 +32,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 몬스터 1장을 릴리스하고 발동할 수 있다. 패 / 덱에서 "암흑 기사 가이아" 몬스터 또는 드래곤족 / 레벨 5 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的效果1回合只能使用1次。
-    ①：把自己场上1只怪兽解放才能发动。从手卡·卡组把1只「暗黑骑士 盖亚」怪兽或者龙族·5星怪兽特殊召唤。
+    此卡名的效果１回合仅可使用１次。①：解放自己场上的１只怪兽可以发动。从手牌・牌组将１只“暗黑骑士盖亚”怪兽或龙族・等级５怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Aqua / Effect
 attribute: WATER
@@ -96,6 +95,11 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  zh-CN:
+  - set_number: MGP5-SC003
+    set_name: Mega Pack 05
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
