--- a/data/cards/33318980.yaml
+++ b/data/cards/33318980.yaml
@@ -12,7 +12,7 @@ name:
   ko: 암흑 기사 가이아솔저
   ko_rr: Amheuk Gisa Gaiasoljeo
   zh-TW:
-  zh-CN: 暗黑骑士 盖亚战士
+  zh-CN: 暗黑骑士盖亚士兵
 text:
   en: |-
     (Quick Effect): You can Tribute 1 Dragon Fusion Monster; Special Summon this card from your hand. If this card is Special Summoned: You can target 1 Attack Position monster on the field; change it to Defense Position. You can Tribute this card; add 1 Level 7 or higher Warrior monster from your Deck to your hand, except "Soldier Gaia the Fierce Knight". You can only use each effect of "Soldier Gaia the Fierce Knight" once per turn.
@@ -32,10 +32,7 @@ text:
     이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 드래곤족 융합 몬스터 1장을 릴리스하고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. 이 효과는 상대 턴에도 발동할 수 있다. ②: 이 카드가 특수 소환에 성공했을 경우, 필드의 공격 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 한다. ③: 이 카드를 릴리스하고 발동할 수 있다. 덱에서 "암흑 기사 가이아솔저" 이외의 레벨 7 이상의 전사족 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②③的效果1回合各能使用1次。
-    ①：把自己场上1只龙族融合怪兽解放才能发动。这张卡从手卡特殊召唤。这个效果在对方回合也能发动。
-    ②：这张卡特殊召唤成功的场合，以场上1只攻击表示怪兽为对象才能发动。那只怪兽变成守备表示。
-    ③：把这张卡解放才能发动。从卡组把「暗黑骑士 盖亚战士」以外的1只7星以上的战士族怪兽加入手卡。
+    此卡名的①②③效果１回合仅可各使用１次。①：解放自己场上的１只龙族融合怪兽可以发动。从手牌将此卡特殊召唤。此效果在对手回合中也可以发动。②：此卡特殊召唤成功的情况下，以场上１只攻击表示的怪兽为对象可以发动。将该怪兽改成守备表示。③：解放此卡可以发动。从牌组将“暗黑骑士盖亚士兵”以外的１只等级７以上的战士族怪兽加入手牌。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: DARK
@@ -114,6 +111,11 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC004
+    set_name: Mega Pack 05
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
