--- a/data/cards/34130561.yaml
+++ b/data/cards/34130561.yaml
@@ -12,7 +12,7 @@ name:
   ko: 마방 기사 가이아
   ko_rr: Mabang Gisa Gaia
   zh-TW:
-  zh-CN: 魔道骑士 盖亚
+  zh-CN: 魔道骑士盖亚
 text:
   en: |-
     (This card is also always treated as a "Gaia The Fierce Knight" card.)
@@ -38,9 +38,7 @@ text:
     이 카드명은 룰상 "암흑 기사 가이아" 카드로도 취급한다. 이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 몬스터가 존재하지 않을 경우, 또는 상대 필드에 공격력 2300 이상의 몬스터가 존재할 경우, 이 카드는 릴리스 없이 일반 소환할 수 있다. ②: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 자신의 패 / 묘지에서 드래곤족 / 레벨 5 몬스터 1장을 고르고 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名在规则上也当作「暗黑骑士 盖亚」卡使用。这个卡名的②的效果1回合只能使用1次。
-    ①：自己场上没有怪兽存在的场合或者对方场上有攻击力2300以上的怪兽存在的场合，这张卡可以不用解放作召唤。
-    ②：这张卡召唤·特殊召唤成功的场合才能发动。从自己的手卡·墓地选1只龙族·5星怪兽守备表示特殊召唤。
+    此卡名在规则上也视为“暗黑骑士盖亚”卡。此卡名的②效果1回合仅可使用1次。①：自己场上不存在怪兽的情况下，或对手场上有攻击力２３００以上的怪兽存在的情况下，此卡无需解放即可召唤。②：此卡召唤・特殊召唤成功的情况下可以发动。从自己手牌・墓地挑选1只龙族・等级５怪兽以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: LIGHT
@@ -119,6 +117,11 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC001
+    set_name: Mega Pack 05
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
