--- a/data/cards/61525276.yaml
+++ b/data/cards/61525276.yaml
@@ -12,7 +12,7 @@ name:
   ko: 저주받은 용－커스 오브 드래곤
   ko_rr: Jeojubat-eun Yong - Keoseu Obeu Deuraegon
   zh-TW:
-  zh-CN: 被诅咒的龙-诅咒之龙
+  zh-CN: 咒缠龙－诅咒之龙
 text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 Spell/Trap from your Deck to your hand, that specifically lists the card "Gaia the Dragon Champion" in its text. If this card is sent to the GY: You can target 1 "Gaia the Dragon Champion" in your Monster Zone; negate the effects of face-up monsters your opponent currently controls with ATK less than or equal to it until the end of this turn. You can only use each effect of "Curse of Dragon, the Cursed Dragon" once per turn.
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "용기사 가이아"의 카드명이 쓰여진 마법 / 함정 카드 1장을 패에 넣는다. ②: 이 카드가 묘지로 보내졌을 경우, 자신 필드의 "용기사 가이아" 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력 이하의 공격력을 가지는, 상대 필드의 모든 앞면 표시 몬스터의 효과는 턴 종료시까지 무효화된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：这张卡召唤·特殊召唤成功的场合才能发动。从卡组把有「龙骑士 盖亚」的卡名记述的1张魔法·陷阱卡加入手卡。
-    ②：这张卡被送去墓地的场合，以自己场上1只「龙骑士 盖亚」为对象才能发动。持有那只怪兽的攻击力以下的攻击力的对方场上的全部表侧表示怪兽的效果直到回合结束时无效化。
+    此卡名的①②效果１回合仅可各使用１次。①：此卡召唤・特殊召唤成功的情况下可以发动。从牌组将１张记载有“龙骑士盖亚”卡名的魔法陷阱卡加入手牌。②：此卡被送至墓地的情况下，以自己场上的１只“龙骑士盖亚”为对象可以发动。对手场上拥有该怪兽的攻击力以下攻击力的所有表侧表示怪兽的效果直至回合结束时为止无效。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
@@ -118,7 +116,11 @@ sets:
   - set_number: ROTD-KR002
     set_name: Rise of the Duelist
     rarities:
-    - Common
+  zh-CN:
+  - set_number: MGP5-SC002
+    set_name: Mega Pack 05
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
