--- a/data/cards/75286621.yaml
+++ b/data/cards/75286621.yaml
@@ -129,9 +129,11 @@ sets:
   - set_number: SLF1-JP027
     set_name: Selection 5
     rarities:
-    - Common
-    - Super Rare
+    - Normal Parallel Rare
+    - Ultra Rare
+    - Ultimate Rare
     - Secret Rare
+    - Prismatic Secret Rare
   ko:
   - set_number: SPFE-KR032
     set_name: 'Booster SP: Fusion Enforcers'
