--- a/data/cards/25586143.yaml
+++ b/data/cards/25586143.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플랜츠 키메라플레시아
   ko_rr: Peuredeteo Peullaencheu Kimerapeullesia
   zh-TW:
-  zh-CN: 捕食植物 奇美拉大花草
+  zh-CN: 捕食植物 奇美拉大王花
 text:
   en: |-
     1 "Predaplant" monster + 1 DARK monster
@@ -40,8 +40,8 @@ text:
     ①: 1턴에 1번, 이 카드의 레벨 이하의 레벨을 가지는 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 제외한다. ②: 이 카드가 상대의 앞면 표시 몬스터와 전투를 실행하는 공격 선언시에 발동할 수 있다. 턴 종료시까지, 그 상대 몬스터의 공격력은 1000 내리고, 이 카드의 공격력은 1000 올린다. ③: 이 카드가 묘지로 보내졌을 경우, 다음 스탠바이 페이즈에 발동할 수 있다. 덱에서 "융합" 마법 카드 또는 "퓨전" 마법 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    「捕食植物」怪兽＋暗属性怪兽
-    ①：1回合1次，以持有这张卡的等级以下的等级的场上1只怪兽为对象才能发动。那只怪兽除外。②：这张卡和对方的表侧表示怪兽进行战斗的攻击宣言时才能发动。直到回合结束时，那只对方怪兽的攻击力下降1000，这张卡的攻击力上升1000。③：这张卡被送去墓地的场合，下次的准备阶段才能发动。从卡组把1张「融合」魔法卡加入手卡。
+    "捕食植物"怪兽＋暗属性怪兽
+    ①：1回合1次，以场上1只拥有此卡等级以下等级的怪兽为对象可以发动。将该怪兽除外。②：此卡与对手的表侧表示怪兽进行战斗的攻击宣言时可以发动。直至回合结束时为止，该对手怪兽的攻击力下降1000，此卡的攻击力上升1000。③：此卡被送至墓地的情况下，在下一个准备阶段可以发动。从牌组将1张"融合"魔法卡或"结合"魔法卡加入手牌。
 card_type: Monster
 monster_type_line: Plant / Fusion / Effect
 attribute: DARK
@@ -116,6 +116,11 @@ sets:
     set_name: LINK VRAINS Pack 3
     rarities:
     - Rare
+  zh-CN:
+  - set_number: CL02-SC044
+    set_name: Classic Pack 02
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
