--- a/data/cards/41209827.yaml
+++ b/data/cards/41209827.yaml
@@ -12,7 +12,7 @@ name:
   ko: 스타브 베놈 퓨전 드래곤
   ko_rr: Seutabeu Venom Pyujeon Deuraegon
   zh-TW:
-  zh-CN: 凶饿毒融合龙
+  zh-CN: 凶饿猛毒结合龙
 text:
   en: |-
     2 DARK monsters on the field, except Tokens
@@ -41,7 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     衍生物以外的场上的暗属性怪兽×2
-    ①：这张卡融合召唤成功的场合才能发动。选对方场上1只特殊召唤的怪兽，这张卡的攻击力直到回合结束时上升那个攻击力数值。②：1回合1次，以对方场上1只5星以上的怪兽为对象才能发动。直到结束阶段，这张卡当作和那只怪兽同名卡使用，得到相同效果。③：融合召唤的这张卡被破坏的场合才能发动。对方场上的特殊召唤的怪兽全部破坏。
+    ①：此卡融合召唤成功的情况下可以发动。挑选对手场上1只被特殊召唤的怪兽，此卡的攻击力直至回合结束时为止上升相当于其攻击力的数值。②：1回合1次，以对手场上1只等级5以上的怪兽为对象可以发动。直至结束阶段为止，此卡获得与该怪兽同样的原本卡名・效果。③：融合召唤的此卡被破坏的情况下可以发动。将对手场上被特殊召唤的怪兽全部破坏。
 card_type: Monster
 monster_type_line: Dragon / Fusion / Effect
 attribute: DARK
@@ -228,6 +228,11 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: CL02-SC047
+    set_name: Classic Pack 02
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
