--- a/data/cards/72129804.yaml
+++ b/data/cards/72129804.yaml
@@ -32,7 +32,7 @@ text:
     ①: 패의 "프레데터" 카드를 임의의 수만큼 상대에게 보여주고, 보여준 수만큼 상대 필드의 앞면 표시 몬스터를 대상으로 하여 발동할 수 있다. 그 몬스터에 포식 카운터를 1개씩 놓는다. 포식 카운터가 놓여진 레벨 2 이상의 몬스터 레벨은 1 이 된다. ②: 자신의 "프레데터 플랜츠" 몬스터가 전투로 파괴될 경우, 대신에 묘지의 이 카드를 제외할 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：把手卡的「捕食」卡任意数量给对方观看，以给人观看的数量的对方场上的表侧表示怪兽为对象才能发动。给那些怪兽各放置1个捕食指示物。有捕食指示物放置的2星以上的怪兽的等级变成1星。②：自己的「捕食植物」怪兽被战斗破坏的场合，可以作为代替把墓地的这张卡除外。
+    ①：将手牌任意数量的"捕食"卡出示给对手，依出示的数量，以对手场上的表侧表示怪兽为对象可以发动。在该怪兽上各放1个捕食计数物。放有捕食计数物的等级2以上怪兽的等级变为1。②：自己的"捕食植物"怪兽将被战斗破坏的情况下，可将墓地的此卡除外作为代替。
 card_type: Spell
 property: Quick-Play
 series:
@@ -161,6 +161,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC051
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
