--- a/data/cards/90846359.yaml
+++ b/data/cards/90846359.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが魔法＆罠ゾーンに存在する限り、お互いのフィールドにそれぞれ１種類の種族のモンスターしか表側表示で存在できない。お互いのプレイヤーは自身のフィールドの表側表示モンスターの種族が２種類以上の場合には１種類になるように墓地へ送らなければならない。
   ko: |-
-    양쪽 플레이어는 각각 종족이 1종류가 되도록, 필드 위의 각자의 몬스터를 묘지로 보낸다. 이 카드가 존재하는 한,서로 각자의 필드 위에 낼 수 있는 몬스터의 종족은 각각 1종류만이 된다.
+    ①: 이 카드가 마법 & 함정 존에 존재하는 한, 서로 필드에 각각 1종류 종족의 몬스터밖에 앞면 표시로 존재할 수 없다. 양쪽의 플레이어는 자신 필드의 앞면 표시 몬스터의 종족이 2종류 이상일 경우에는 1종류가 되도록 묘지로 보내야 한다.
   zh-TW:
   zh-CN: |-
     ①：只要此卡存在于魔法与陷阱区域，双方场上各自仅可有1种种族的怪兽以表侧表示存在。双方玩家自身场上的表侧表示怪兽的种族有2种以上的情况下，必须将怪兽送至墓地，直至只剩1种为止。
