--- a/data/cards/07080743.yaml
+++ b/data/cards/07080743.yaml
@@ -8,7 +8,7 @@ name:
   it: Treno Espresso Trolley Olley
   pt: Trem Expresso de Vagões Robustos
   ja: <ruby>豪<rt>ごう</rt></ruby><ruby>腕<rt>わん</rt></ruby><ruby>特<rt>とっ</rt></ruby><ruby>急<rt>きゅう</rt></ruby>トロッコロッコ
-  ja_romaji: Gōwan Tokkyū Torokkorokko
+  ja_romaji: Gōwantokkyū Torokkorokko
   ko: 호완특급 트럭로코
   ko_rr:
   zh-TW:
