--- a/data/cards/22123627.yaml
+++ b/data/cards/22123627.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：手札の水属性モンスター２体をデッキに戻してシャッフルする。その後、自分はデッキから３枚ドローする。
   ko: |-
-    패의 물 속성 몬스터 2장을 덱으로 되돌리고 셔플한다. 그 후, 덱에서 카드를 3장 드로우한다.
+    ①: 패의 물 속성 몬스터 2장을 덱으로 되돌리고 셔플한다. 그 후, 자신은 덱에서 3장 드로우한다.
   zh-TW: |-
     将手牌中的2只水属性怪兽返回至牌组并洗牌。之后，从牌组中抽取3张卡牌。
   zh-CN: |-
