--- a/data/cards/24731453.yaml
+++ b/data/cards/24731453.yaml
@@ -8,7 +8,7 @@ name:
   it: Russel lo Spazzaneve Frettoloso
   pt: Trator de Neve Ultraveloz
   ja: <ruby>除<rt>じょ</rt></ruby><ruby>雪<rt>せつ</rt></ruby><ruby>機<rt>き</rt></ruby><ruby>関<rt>かん</rt></ruby><ruby>車<rt>しゃ</rt></ruby>ハッスル・ラッセル
-  ja_romaji: Josetsu Kikansha Hassuru Rasseru
+  ja_romaji: Josetsukikansha Hassuru Rasseru
   ko: 제설기관차 허슬 러셀
   ko_rr: Jeseolgigwanha Heoseul Reosel
   zh-TW:
