--- a/data/cards/24919805.yaml
+++ b/data/cards/24919805.yaml
@@ -8,7 +8,7 @@ name:
   it: Motrice Criminale
   pt: Automotora Brigona
   ja: <ruby>無<rt>ぶ</rt></ruby><ruby>頼<rt>らい</rt></ruby><ruby>特<rt>とっ</rt></ruby><ruby>急<rt>きゅう</rt></ruby>バトレイン
-  ja_romaji: Burai Tokkyū Batorein
+  ja_romaji: Buraitokkyū Batorein
   ko: 무뢰특급 바트레인
   ko_rr: Muroeteukgeup Bateurein
   zh-TW:
