--- a/data/cards/34475451.yaml
+++ b/data/cards/34475451.yaml
@@ -8,7 +8,7 @@ name:
   it: Treno Costruzione Segnale Rosso
   pt: Trem de Construção Sinal Vermelho
   ja: <ruby>工<rt>こう</rt></ruby><ruby>作<rt>さく</rt></ruby><ruby>列<rt>れっ</rt></ruby><ruby>車<rt>しゃ</rt></ruby>シグナル・レッド
-  ja_romaji: Kōsaku Ressha Shigunaru Reddo
+  ja_romaji: Kōsakuressha Shigunaru Reddo
   ko: 공작열차 시그널 레드
   ko_rr: Gongjakyeolcha Sigeuneol Redeu
   zh-TW:
