--- a/data/cards/51126152.yaml
+++ b/data/cards/51126152.yaml
@@ -8,7 +8,7 @@ name:
   it: Cavaliere Espresso Notturno
   pt: Cavaleiro do Expresso Noturno
   ja: <ruby>深<rt>しん</rt></ruby><ruby>夜<rt>や</rt></ruby><ruby>急<rt>きゅう</rt></ruby><ruby>行<rt>こう</rt></ruby><ruby>騎<rt>き</rt></ruby><ruby>士<rt>し</rt></ruby>ナイト・エクスプレス・ナイト
-  ja_romaji: Shin'ya Kyūkō Kishi Naito Ekusupuresu Naito
+  ja_romaji: Shin'yakyūkōkishi Naito Ekusupuresu Naito
   ko: 심야 급행 기사 나이트 익스프레스 나이트
   ko_rr: Simya Geuphaeng Gisa Naiteu Ikseupeureseu Naiteu
   zh-TW:
