--- a/data/cards/79850798.yaml
+++ b/data/cards/79850798.yaml
@@ -8,7 +8,7 @@ name:
   it: Espresso Freccia Razzo
   pt: Expresso Foguete Flecha
   ja: <ruby>爆<rt>ばく</rt></ruby><ruby>走<rt>そう</rt></ruby><ruby>特<rt>とっ</rt></ruby><ruby>急<rt>きゅう</rt></ruby>ロケット・アロー
-  ja_romaji: Bakusō Tokkyū Roketto Arō
+  ja_romaji: Bakusōtokkyū Roketto Arō
   ko: 폭주특급 로켓 애로우
   ko_rr:
   zh-TW:
