--- a/data/cards/13647631.yaml
+++ b/data/cards/13647631.yaml
@@ -8,7 +8,7 @@ name:
   it: Treno Merci Pesante Derrigru
   pt: Trem de Carga Pesada Grundaste
   ja: <ruby>重<rt>じゅう</rt></ruby><ruby>機<rt>き</rt></ruby><ruby>貨<rt>か</rt></ruby><ruby>列<rt>れっ</rt></ruby><ruby>車<rt>しゃ</rt></ruby>デリックレーン
-  ja_romaji: Jūkika Ressha Derikkurēn
+  ja_romaji: Jūkikaressha Derikkurēn
   ko: 중기화열차 데릭크레인
   ko_rr: Jung-gihwayeolcha Derik-keurein
   zh-TW:
