--- a/data/cards/26096328.yaml
+++ b/data/cards/26096328.yaml
@@ -8,7 +8,7 @@ name:
   it: Cannone Ferroviario Supercorazzato Juggernaut Liebe
   pt: Supercouraçado Canhão de Trilho Juggernaut Liebe
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>弩<rt>ど</rt></ruby><ruby>級<rt>きゅう</rt></ruby><ruby>砲<rt>ほう</rt></ruby><ruby>塔<rt>とう</rt></ruby><ruby>列<rt>れっ</rt></ruby><ruby>車<rt>しゃ</rt></ruby>ジャガーノート・リーベ
-  ja_romaji: Chōdokyū Hōtō Ressha Jagānōto Rībe
+  ja_romaji: Chōdokyū Hōtōressha Jagānōto Rībe
   ko: 초노급포탑열차 저거너트 리베
   ko_rr: Chonogeup-potap-yeolcha Jeogeoneoteu Ribe
   zh-TW:
