--- a/data/cards/49032236.yaml
+++ b/data/cards/49032236.yaml
@@ -8,7 +8,7 @@ name:
   it: 'Numero 81: Cannone Ferroviario Supercorazzato Super Dora'
   pt: 'Número 81: Supercouraçado Canhão de Trilho Super Dora'
   ja: <ruby>Ｎｏ．<rt>ナンバーズ</rt></ruby>８１ <ruby>超<rt>ちょう</rt></ruby><ruby>弩<rt>ど</rt></ruby><ruby>級<rt>きゅう</rt></ruby><ruby>砲<rt>ほう</rt></ruby><ruby>塔<rt>とう</rt></ruby><ruby>列<rt>れっ</rt></ruby><ruby>車<rt>しゃ</rt></ruby>スペリオル・ドーラ
-  ja_romaji: Nanbāzu Hachijūichi Chōdokyū Hōtō Ressha Superioru Dōra
+  ja_romaji: Nanbāzu Hachijūichi Chōdokyū Hōtōressha Superioru Dōra
   ko: No.81 초노급포탑열차 슈페리어 도라
   ko_rr: Neombeojeu Yeoldeunhana Chonogeup-potap-yeolcha Syuperi-eo Dora
   zh-TW:
