--- a/data/cards/56910167.yaml
+++ b/data/cards/56910167.yaml
@@ -8,7 +8,7 @@ name:
   it: Cannone Ferroviario Supercorazzato
   pt: Supercouraçado Canhão de Trilho
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>弩<rt>ど</rt></ruby><ruby>級<rt>きゅう</rt></ruby><ruby>砲<rt>ほう</rt></ruby><ruby>塔<rt>とう</rt></ruby><ruby>列<rt>れっ</rt></ruby><ruby>車<rt>しゃ</rt></ruby>グスタフ・マックス
-  ja_romaji: Chōdokyū Hōtō Ressha Gusutafu Makkusu
+  ja_romaji: Chōdokyū Hōtōressha Gusutafu Makkusu
   ko: 초노급포탑열차 구스타프 맥스
   ko_rr: Chonogeup-potap-yeolcha Guseutapeu Maekseu
   zh-TW: 超重型砲塔列車古斯塔夫超大砲
