--- a/data/cards/78231355.yaml
+++ b/data/cards/78231355.yaml
@@ -91,9 +91,11 @@ sets:
   - set_number: SLF1-JP067
     set_name: Selection 5
     rarities:
-    - Common
-    - Super Rare
+    - Normal Parallel Rare
+    - Ultra Rare
+    - Ultimate Rare
     - Secret Rare
+    - Prismatic Secret Rare
   ko:
   - set_number: DBMF-KR023
     set_name: 'Deck Build Pack: Mystic Fighters'
