--- a/data/cards/76136345.yaml
+++ b/data/cards/76136345.yaml
@@ -8,7 +8,7 @@ name:
   it: Piattaforma di Scambio Rotante
   pt: Pátio de Manobras Giratório
   ja: <ruby>転<rt>てん</rt></ruby><ruby>回<rt>かい</rt></ruby><ruby>操<rt>そう</rt></ruby><ruby>車<rt>しゃ</rt></ruby>
-  ja_romaji: Tenkai Sōsha
+  ja_romaji: Tenkaisōsha
   ko: 전회조차
   ko_rr: Jeonhoejocha
   zh-TW:
