--- a/data/cards/89181134.yaml
+++ b/data/cards/89181134.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플랜츠 썬듀 킨지
   ko_rr: Peuredeteo Peullaencheu Sseondyu Kinji
   zh-TW:
-  zh-CN: 捕食植物 茅膏菜伞蜥
+  zh-CN: 捕食植物 毛毡伞蜥蜴
 text:
   en: |-
     Monsters with a Predator Counter that you use as Fusion Materials are treated as DARK. During your Main Phase: You can Fusion Summon 1 DARK Fusion Monster from your Extra Deck, using this card on the field and monsters from your hand, field, and/or monsters with a Predator Counter your opponent controls as Fusion Material. You can only use this effect of "Predaplant Chlamydosundew" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 몬스터 존에 존재하는 한, 자신이 융합 소재로 하는 포식 카운터가 놓여진 몬스터의 속성은 어둠 속성으로 취급한다. ②: 자신 메인 페이즈에 발동할 수 있다. 어둠 속성의 융합 몬스터 카드에 기재된, 필드의 이 카드를 포함하는 융합 소재 몬스터를 자신의 패 / 필드 및 상대 필드의 포식 카운터가 놓여진 몬스터 중에서 골라 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW:
   zh-CN: |-
-    「捕食植物 茅膏菜伞蜥」的②的效果1回合只能使用1次。 ①：只要这张卡在怪兽区域存在，自己要作为融合素材的有捕食指示物放置的怪兽的属性当作暗属性使用。 ②：自己主要阶段才能发动。暗属性融合怪兽卡决定的包含场上的这张卡的融合素材怪兽从自己的手卡·场上以及对方场上的有捕食指示物放置的怪兽之中选出送去墓地，把那1只融合怪兽从额外卡组融合召唤。
+    此卡名的②效果1回合仅可使用1次。①：只要此卡存在于怪兽区域，自己作为融合素材的、放有捕食计数物的怪兽的属性视为暗属性。②：在自己的主要阶段可以发动。从自己的手牌・场上及对手场上放有捕食计数物的怪兽中，挑选由暗属性融合怪兽卡决定的、包含场上此卡在内的融合素材怪兽送至墓地，从额外牌组将1只该融合怪兽融合召唤。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: DARK
@@ -126,6 +126,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 5'
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC038
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
