--- a/data/cards/61677004.yaml
+++ b/data/cards/61677004.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프레데터 플랜츠 달링 코브라
   ko_rr:
   zh-TW:
-  zh-CN: 捕食植物 蛇瓶草眼镜蛇
+  zh-CN: 捕食植物 百合眼镜蛇
 text:
   en: |-
     If this card is Special Summoned by the effect of a "Predaplant" monster: You can add 1 "Polymerization" Spell Card or "Fusion" Spell Card from your Deck to your hand. You can only use this effect of "Predaplant Darlingtonia Cobra" once per Duel.
@@ -32,7 +32,7 @@ text:
     "프레데터 플랜츠 달링 코브라"의 효과는 듀얼 중에 1번밖에 사용할 수 없다. ①: 이 카드가 "프레데터 플랜츠" 몬스터의 효과로 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "융합" 마법 카드 또는 "퓨전" 마법 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    「捕食植物 蛇瓶草眼镜蛇」的效果在决斗中只能使用1次。①：这张卡用「捕食植物」怪兽的效果特殊召唤成功的场合才能发动。从卡组把1张「融合」魔法卡加入手卡。
+    此卡名的效果在决斗中仅可使用1次。①：此卡在以"捕食植物"怪兽的效果特殊召唤成功的情况下可以发动。从牌组将1张"融合"魔法卡或"结合"魔法卡加入手牌。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: DARK
@@ -78,6 +78,11 @@ sets:
     set_name: Maximum Crisis
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL02-SC040
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
