--- a/data/cards/06459419.yaml
+++ b/data/cards/06459419.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 亚马逊转生术
 text:
   en: |-
-    Destroy all face-up "Amazoness" monsters you control. Then, you can Special Summon any number of Level 4 or lower "Amazoness" monsters from your Graveyard in face-up Defense Position, up to the number of monsters destroyed by this effect.
+    Destroy all "Amazoness" monsters you control, then, you can Special Summon Level 4 or lower "Amazoness" monsters from your GY in face-up Defense Position, up to the number of monsters destroyed by this effect.
   de: |-
     Zerstöre alle „Amazonisch“-Monster, die du kontrollierst, dann kannst du „Amazonisch“-Monster der Stufe 4 oder niedriger bis zur Anzahl der Monster, die durch diesen Effekt zerstört wurden, als Spezialbeschwörung von deinem Friedhof in die offene Verteidigungsposition beschwören.
   es: |-
