--- a/data/cards/11021521.yaml
+++ b/data/cards/11021521.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 招财猫王
 text:
   en: |-
-    During your opponent's turn, when this card in your possession is sent to your Graveyard by an opponent's card effect: It becomes the End Phase of this turn.
+    During your opponent's turn, when this card in your possession is sent to your GY by an opponent's card effect: It becomes the End Phase of this turn.
   de: |-
     Während des Spielzugs deines Gegners, wenn diese Karte, die dir gehört, durch einen Karteneffekt eines Gegners auf deinen Friedhof gelegt wird: Die End Phase dieses Spielzugs beginnt.
   es: |-
