--- a/data/cards/50766506.yaml
+++ b/data/cards/50766506.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 忍法 分身之术
 text:
   en: |-
-    Tribute 1 "Ninja" monster; Special Summon any number of "Ninja" monsters from your Deck, in face-up Attack Position or face-down Defense Position, with combined Levels less than or equal to the Level of the Tributed monster. When this card leaves the field: Destroy those monsters.
+    Activate this card by Tributing 1 "Ninja" monster; Special Summon any number of "Ninja" monsters from your Deck, in face-up Attack Position and/or face-down Defense Position, with combined Levels less than or equal to the Level of the Tributed monster. When this card leaves the field, destroy those monsters.
   de: |-
     Aktiviere diese Karte, indem du 1 „Ninja“-Monster als Tribut anbietest; beschwöre eine beliebige Anzahl „Ninja“-Monster, deren gemeinsame Stufe kleiner oder gleich der Stufe des als Tribut angebotenen Monsters ist, als Spezialbeschwörung von deinem Deck in die offene Angriffsposition und/oder verdeckte Verteidigungsposition. Wenn diese Karte das Spielfeld verlässt, zerstöre jene Monster.
   es: |-
