--- a/data/cards/73445448.yaml
+++ b/data/cards/73445448.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 8 DARK monsters
-    Must be Xyz Summoned and cannot be Special Summoned by other ways. Once per turn, during either player's turn: You can detach 1 Xyz Material from this card and send 1 card from your hand to the Graveyard, then target 1 face-up card your opponent controls; change this card to Defense Position, and if you do, that face-up card has its effects negated until the end of this turn.
+    Must be Xyz Summoned. Once per turn (Quick Effect): You can detach 1 material from this card and send 1 card from your hand to the GY, then target 1 face-up card your opponent controls; change this card to Defense Position, and if you do, negate that targeted card's effects, until the end of this turn.
   de: |-
     2 FINSTERNIS Monster der Stufe 8
     Muss als Xyz-Beschwörung beschworen werden. Einmal pro Spielzug (Schnelleffekt): Du kannst 1 Material von dieser Karte abhängen und 1 Karte von deiner Hand auf den Friedhof legen und dann 1 offene Karte wählen, die dein Gegner kontrolliert; ändere diese Karte in die Verteidigungsposition und falls du dies tust, annulliere die Effekte jener als Ziel gewählten Karte bis zum Ende dieses Spielzugs.
@@ -54,7 +54,7 @@ series:
 sets:
   en:
   - set_number: RATE-ENSE1
-    set_name: 'Raging Tempest: Special Edition'
+    set_name: Raging Tempest Special Edition
     rarities:
     - Super Rare
   - set_number: OP20-EN019
@@ -67,7 +67,7 @@ sets:
     - Ultra Rare
   de:
   - set_number: RATE-DESE1
-    set_name: 'Raging Tempest: Special Edition'
+    set_name: Raging Tempest Special Edition
     rarities:
     - Super Rare
   - set_number: OP20-DE019
@@ -76,7 +76,7 @@ sets:
     - Common
   fr:
   - set_number: RATE-FRSE1
-    set_name: 'Raging Tempest: Special Edition'
+    set_name: Raging Tempest Special Edition
     rarities:
     - Super Rare
   - set_number: OP20-FR019
@@ -85,7 +85,7 @@ sets:
     - Common
   it:
   - set_number: RATE-ITSE1
-    set_name: 'Raging Tempest: Special Edition'
+    set_name: Raging Tempest Special Edition
     rarities:
     - Super Rare
   - set_number: OP20-IT019
@@ -94,7 +94,7 @@ sets:
     - Common
   pt:
   - set_number: RATE-PTSE1
-    set_name: 'Raging Tempest: Special Edition'
+    set_name: Raging Tempest Special Edition
     rarities:
     - Super Rare
   - set_number: OP20-PT019
