--- a/data/cards/76913983.yaml
+++ b/data/cards/76913983.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN: 黑羽-兵翼鸦
 text:
   en: |-
-    1 "Blackwing" Tuner + 1 or more non-Tuner monsters
-    If this card attacks a Defense Position monster, it gains 500 ATK during the Damage Step only, also inflict piercing battle damage to your opponent.
+    1 "Blackwing" Tuner + 1+ non-Tuner monsters
+    If this card attacks a Defense Position monster, it gains 500 ATK during the Damage Step only, also inflict piercing battle damage.
   de: |-
     1 „Schwarzflügel“-Empfänger + 1+ Nicht-Empfänger-Monster
     Falls diese Karte ein Monster in Verteidigungsposition angreift, erhält sie nur während des Damage Steps 500 ATK, zusätzlich füge durchschlagenden Kampfschaden zu.
