--- a/data/cards/79109599.yaml
+++ b/data/cards/79109599.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 沼地魔神王
 text:
   en: |-
-    This card can be used as a substitute for any 1 Fusion Material whose name is specifically listed on the Fusion Monster Card, but the other Fusion Material(s) must be correct. You can discard this card to the Graveyard; add 1 "Polymerization" from your Deck to your hand.
+    This card in your hand, field, or GY can be used as a substitute for any 1 Fusion Material whose name is mentioned on the Fusion Monster Card, but the other materials must be correct. You can discard this card to the GY; add 1 "Polymerization" from your Deck to your hand.
   de: |-
     Diese Karte in deiner Hand, auf deiner Spielfeldseite oder in deinem Friedhof kann anstelle von 1 beliebigen Fusionsmaterial verwendet werden, dessen Name auf der Fusionsmonsterkarte erwähnt wird, aber das andere Material muss das richtige sein. Du kannst diese Karte auf den Friedhof abwerfen; füge deiner Hand 1 „Polymerisation“ von deinem Deck hinzu.
   es: |-
