--- a/data/cards/03734202.yaml
+++ b/data/cards/03734202.yaml
@@ -15,9 +15,9 @@ name:
   zh-CN: 自然的神星树
 text:
   en: |-
-    If this card is sent to the Graveyard: Add 1 "Naturia" card from your Deck to your hand, except "Naturia Sacred Tree". You can only use 1 of the following effects of "Naturia Sacred Tree" per turn, and only once that turn.
-    ● You can Tribute 1 EARTH Insect-Type monster; Special Summon 1 Level 4 or lower EARTH Plant-Type monster from your Deck.
-    ● You can Tribute 1 EARTH Plant-Type monster; Special Summon 1 Level 4 or lower EARTH Insect-Type monster from your Deck.
+    If this card is sent to the GY: Add 1 "Naturia" card from your Deck to your hand, except "Naturia Sacred Tree". You can only use 1 of the following effects of "Naturia Sacred Tree" per turn, and only once that turn.
+    ● You can Tribute 1 EARTH Insect monster; Special Summon 1 Level 4 or lower EARTH Plant monster from your Deck.
+    ● You can Tribute 1 EARTH Plant monster; Special Summon 1 Level 4 or lower EARTH Insect monster from your Deck.
   de: |-
     Falls diese Karte auf den Friedhof gelegt wird: Füge deiner Hand 1 „Naturia“-Karte von deinem Deck hinzu, außer „Naturias heiliger Baum“. Du kannst nur 1 der folgenden Effekte von „Naturias heiliger Baum“ pro Spielzug verwenden und in jenem Spielzug nur einmal.
     ● Du kannst 1 ERDE Insekt-Monster als Tribut anbieten; beschwöre 1 ERDE Pflanze-Monster der Stufe 4 oder niedriger als Spezialbeschwörung von deinem Deck.
