--- a/data/cards/24694698.yaml
+++ b/data/cards/24694698.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 自然栗子
 text:
   en: |-
-    When this card is Normal Summoned: You can send 1 "Naturia" monster from your Deck to the Graveyard. Once per turn: You can target 2 "Naturia" monsters in your Graveyard; shuffle both those targets into the Deck, then draw 1 card.
+    When this card is Normal Summoned: You can send 1 "Naturia" monster from your Deck to the GY. Once per turn: You can target 2 "Naturia" monsters in your GY; shuffle both those targets into the Deck, then draw 1 card.
   de: |-
     Wenn diese Karte als Normalbeschwörung beschworen wird: Du kannst 1 „Naturia“-Monster von deinem Deck auf den Friedhof legen. Einmal pro Spielzug: Du kannst 2 „Naturia“-Monster in deinem Friedhof wählen; mische jene beiden gewählten Ziele ins Deck, dann ziehe 1 Karte.
   es: |-
