--- a/data/cards/35272499.yaml
+++ b/data/cards/35272499.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 패에서 몬스터 1장을 묘지로 보내고 발동할 수 있다. 덱에서 "프레데터 플랜츠 오프리스 스콜피오" 이외의 "프레데터 플랜츠" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「捕食植物 蜂兰蝎」的效果1回合只能使用1次。①：这张卡召唤·特殊召唤成功的场合，从手卡把1只怪兽送去墓地才能发动。从卡组把「捕食植物 蜂兰蝎」以外的1只「捕食植物」怪兽特殊召唤。
+    此卡名的效果1回合仅可使用1次。①：此卡召唤・特殊召唤成功的情况下，从手牌将1只怪兽送至墓地可以发动。从牌组将1只"捕食植物 蜂兰蝎"以外的"捕食植物"怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: DARK
@@ -124,6 +124,11 @@ sets:
     - Rare
   - set_number: AE14-KR009
     set_name: Advanced Event Pack 2019 Vol.2
+    rarities:
+    - Super Rare
+  zh-CN:
+  - set_number: CL02-SC039
+    set_name: Classic Pack 02
     rarities:
     - Super Rare
 limit_regulation:
