--- a/data/cards/83266092.yaml
+++ b/data/cards/83266092.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 超古代生物的墓场
 text:
   en: |-
-    All Level 6 or higher Special Summoned monsters on the field cannot declare attacks or activate their effects.
+    Level 6 or higher Special Summoned monsters on the field cannot declare attacks, nor can players activate their effects.
   de: |-
     Weder können als Spezialbeschwörung beschworene Monster der Stufe 6 oder höher auf dem Spielfeld Angriffe deklarieren noch können Spieler ihre Effekte aktivieren.
   es: |-
