--- a/data/cards/28827503.yaml
+++ b/data/cards/28827503.yaml
@@ -9,7 +9,7 @@ name:
   pt: Linkado ao VRAINS!
   ja: <ruby>Ｉｎｔｏ<rt>イントゥ</rt></ruby> <ruby>ｔｈｅ<rt>ザ</rt></ruby> <ruby>ＶＲＡＩＮＳ<rt>ヴレインズ</rt></ruby>！
   ja_romaji: Intu Za Vureinzu!
-  ko: <ruby>Into the VRAINS<rt>인투 더 브레인즈</rt>!</ruby>
+  ko: <ruby>Into<rt>인투</rt></ruby> <ruby>the<rt>더</rt></ruby> <ruby>VRAINS<rt>브레인즈</rt></ruby>!
   ko_rr: Intu Deo Beureinjeu!
   zh-TW:
   zh-CN: 进入智能虚拟网
