--- a/data/cards/00295517.yaml
+++ b/data/cards/00295517.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 传说之都 亚特兰蒂斯
 text:
   en: |-
-    (This card's name is always treated as "Umi".)
+    (This card is always treated as "Umi".)
     All WATER monsters on the field gain 200 ATK/DEF. Reduce the Level of all WATER monsters in both players' hands and on the field by 1.
   de: |-
     (Der Name dieser Karte wird immer als „Umi“ behandelt.)
