--- a/data/cards/03078576.yaml
+++ b/data/cards/03078576.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 八汰乌
 text:
   en: |-
-    This card cannot be Special Summoned. This card returns to its owner's hand during the End Phase of the turn it is Normal Summoned or flipped face-up. When this card inflicts Battle Damage to your opponent, they skip their next Draw Phase.
+    Cannot be Special Summoned. During the End Phase of the turn this card was Normal Summoned or flipped face-up: Return it to the hand. If this card inflicts battle damage to your opponent: Skip the Draw Phase of their next turn.
   de: |-
     Diese Karte kann nicht als Spezialbeschwörung beschworen werden. Diese Karte kehrt in der End Phase des Spielzugs, in dem sie als Normalbeschwörung beschworen oder aufgedeckt wurde, auf die Hand ihres Besitzers zurück. Wenn diese Karte deinem Gegner Kampfschaden zufügt, überspringt er seine nächste Draw Phase.
   es: |-
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     这张卡不能特殊召唤。召唤·反转的回合的结束阶段时回到持有者手卡。这张卡给与对方基本分战斗伤害的场合，下次的对方回合的抽卡阶段跳过。
 card_type: Monster
-monster_type_line: Fiend / Spirit
+monster_type_line: Fiend / Spirit / Effect
 attribute: WIND
 level: 2
 atk: 200
