--- a/data/cards/53341729.yaml
+++ b/data/cards/53341729.yaml
@@ -6,7 +6,7 @@ name:
   es: Espejo Atrapaluz
   fr: Miroir Absorbant de Lumière
   it: Specchio Imprigiona-Luce
-  pt: Espelho Aprisionador da Luz
+  pt: Espelho Aprisionador de Luz
   ja: <ruby>閃<rt>せん</rt></ruby><ruby>光<rt>こう</rt></ruby>を<ruby>吸<rt>す</rt></ruby>い<ruby>込<rt>こ</rt></ruby>むマジック・ミラー
   ja_romaji: Senkō wo Suikomu Majikku Mirā
   ko: 섬광을 흡수하는 마법 거울
@@ -15,7 +15,7 @@ name:
   zh-CN: 吸入闪光的魔镜
 text:
   en: |-
-    Negate all LIGHT monster effects activated on the field or in the Graveyard.
+    Negate all LIGHT monster effects activated on the field or in the GY.
   de: |-
     Annulliere die Effekte aller LICHT Monster, die auf dem Spielfeld oder im Friedhof aktiviert werden.
   es: |-
@@ -25,7 +25,7 @@ text:
   it: |-
     Annulla tutti gli effetti dei mostri LUCE che si attivano sul Terreno o nel Cimitero.
   pt: |-
-    Enquanto esta carta estiver virada para cima no campo, os efeitos de monstros LIGHT ativados no campo ou no Cemitério são negados.
+    Negue todos os efeitos de monstros de LUZ que ativaram no campo ou no Cemitério.
   ja: |-
     このカードがフィールド上に存在する限り、フィールド上・墓地で発動する光属性モンスターの効果は無効化される。
   ko: |-
