--- a/data/cards/76039636.yaml
+++ b/data/cards/76039636.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 恶魔铲土虫
 text:
   en: |-
-    Cannot be Normal Summoned or Set. Must be Special Summoned (from your hand) by banishing 2 Insect-Type monsters from your Graveyard, and cannot be Special Summoned by other ways. When this card inflicts Battle Damage to your opponent: Send the top card of their Deck to the Graveyard.
+    Cannot be Normal Summoned/Set. Must be Special Summoned (from your hand) by banishing 2 Insect monsters from your GY. If this card inflicts battle damage to your opponent: Send the top card of their Deck to the GY.
   de: |-
     Kann nicht als Normalbeschwörung beschworen oder gesetzt werden. Muss als Spezialbeschwörung (von deiner Hand) beschworen werden, indem du 2 Monster vom Typ Insekt von deinem Friedhof verbannst, und kann nicht auf andere Art als Spezialbeschwörung beschworen werden. Wenn diese Karte deinem Gegner Kampfschaden zufügt: Lege die oberste Karte seines Decks auf den Friedhof.
   es: |-
