--- a/data/cards/80532587.yaml
+++ b/data/cards/80532587.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Synchro Monster + 1 Xyz Monster
-    Must be Special Summoned (from your Extra Deck) by sending the above cards you control to the GY. (You do not use "Polymerization".) Once per turn: You can Special Summon 1 Level 4 monster from your hand. If this card is sent to the GY: You can target 1 card on the field; destroy it. You can only Special Summon "Elder Entity N'tss(s)" once per turn.
+    Must be Special Summoned (from your Extra Deck) by sending the above cards you control to the GY. Once per turn: You can Special Summon 1 Level 4 monster from your hand. If this card is sent to the GY: You can target 1 card on the field; destroy it. You can only Special Summon "Elder Entity N'tss(s)" once per turn.
   de: |-
     1 Synchromonster + 1 Xyz-Monster
     Muss als Spezialbeschwörung (von deinem Extra Deck) beschworen werden, indem du die oben aufgeführten Karten, die du kontrollierst, auf den Friedhof legst. („Polymerisation“ wird nicht verwendet.) Einmal pro Spielzug: Du kannst 1 Monster der Stufe 4 als Spezialbeschwörung von deiner Hand beschwören. Falls diese Karte auf den Friedhof gelegt wird: Du kannst 1 Karte auf dem Spielfeld wählen; zerstöre sie. Du kannst nur einmal pro Spielzug ein oder mehr „Ältestes Wesen N'tss“ als Spezialbeschwörung beschwören.
