--- a/data/cards/84224627.yaml
+++ b/data/cards/84224627.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 2 monsters
-    While this card has an Xyz Material attached that was originally WATER, it cannot be destroyed by battle. Once per turn, during either player's turn: You can detach 1 Xyz Material from this card, then target 1 Rank 4 or lower Xyz Monster you control; its ATK and DEF each become double its original ATK and DEF until the end of this turn.
+    While this card has a material attached that was originally WATER, it cannot be destroyed by battle. Once per turn (Quick Effect): You can detach 1 material from this card, then target 1 Rank 4 or lower Xyz Monster you control; its ATK/DEF become double its original ATK/DEF until the end of this turn.
   de: |-
     2 Monster der Stufe 2
     Solange an diese Karte ein Xyz-Material angehängt ist, das ursprünglich WASSER war, kann sie nicht durch Kampf zerstört werden. Einmal pro Spielzug, während des Spielzugs eines beliebigen Spielers: Du kannst 1 Xyz-Material von dieser Karte abhängen und dann 1 Xyz-Monster des Rangs 4 oder niedriger wählen, das du kontrollierst; seine ATK und DEF werden bis zum Ende dieses Spielzugs gleich dem Doppelten seiner Grund-ATK und -DEF.
@@ -75,7 +75,7 @@ sets:
     set_name: 'Premium Gold: Return of the Bling'
     rarities:
     - Gold Secret Rare
-  - set_number: MAMA-EN066
+  - set_number: MAMA-FR066
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
