--- a/data/cards/04031928.yaml
+++ b/data/cards/04031928.yaml
@@ -66,6 +66,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: SDY-032
     set_name: 'Starter Deck: Yugi'
     rarities:
@@ -136,6 +137,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: DDY-F030
     set_name: 'Starter Deck: Yugi'
@@ -174,6 +176,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: MIY-I030
     set_name: 'Starter Deck: Yugi'
@@ -212,6 +215,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: DIY-P030
     set_name: 'Starter Deck: Yugi'
@@ -241,6 +245,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: ''
     set_name: Vol.5
