--- a/data/cards/08198620.yaml
+++ b/data/cards/08198620.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Zombie monsters
-    Must first be Fusion Summoned. Monsters cannot be destroyed by battle with this card. At the end of the Damage Step, if this card battled a monster that has an original Level: That monster's ATK becomes 0, also, if that monster is still face-up on the field, Special Summon 1 "Dark Soul Token" (Zombie/DARK/Level ?/ATK ?/DEF 0). (When Summoned, its Level and ATK become equal to the original Level and ATK of that monster.) You can only control 1 "Dragonecro Nethersoul Dragon".
+    Must first be Fusion Summoned. Monsters cannot be destroyed by battle with this card. At the end of the Damage Step, if this card battled a monster: Change that monster's ATK to 0, also, if that monster is still face-up on the field, Special Summon 1 "Dark Soul Token" (Zombie/DARK/Level ?/ATK ?/DEF 0) with the same Level/ATK as the original Level/ATK of that monster. You can only control 1 "Dragonecro Nethersoul Dragon".
   de: |-
     2 Zombie-Monster
     Muss erst als Fusionsbeschwörung beschworen werden. Monster können nicht durch Kampf mit dieser Karte zerstört werden. Am Ende des Damage Steps, falls diese Karte gegen ein Monster gekämpft hat, das eine Grund-Stufe hat: Die ATK des Monsters werden zu 0, zusätzlich, falls sich das Monster noch offen auf dem Spielfeld befindet, beschwöre 1 „Finsterseele-Spielmarke“ (Zombie/FINSTERNIS/Stufe ?/ATK ?/DEF 0) als Spezialbeschwörung. (Wenn sie beschworen wird, werden ihre Stufe und ihre ATK dieselben wie die Grund-Stufe und -ATK des Monsters.) Du kannst nur 1 „Drachonekro-Niederseelendrache“ kontrollieren.
