--- a/data/cards/14532163.yaml
+++ b/data/cards/14532163.yaml
@@ -79,6 +79,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   de:
   - set_number: IGAS-DE067
     set_name: Ignition Assault
@@ -98,6 +99,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: IGAS-FR067
     set_name: Ignition Assault
@@ -117,6 +119,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: IGAS-IT067
     set_name: Ignition Assault
@@ -136,6 +139,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: IGAS-PT067
     set_name: Ignition Assault
@@ -155,6 +159,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: IGAS-JP067
     set_name: Ignition Assault
