--- a/data/cards/17484499.yaml
+++ b/data/cards/17484499.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 现世与冥界的逆转
 text:
   en: |-
-    If both players have 15 or more cards in their Graveyards: Pay 1000 LP; each player swaps the cards in their Graveyard with the cards in their Deck, then shuffles their Deck. You can only activate 1 "Exchange of the Spirit" per Duel.
+    If both players have 15 or more cards in their GYs: Pay 1000 LP; each player swaps the cards in their GY with the cards in their Deck, then shuffles their Deck. You can only activate 1 "Exchange of the Spirit" per Duel.
   de: |-
     Falls beide Spieler 15 oder mehr Karten in ihren Friedhöfen haben: Zahle 1000 LP; jeder Spieler vertauscht die Karten in seinem Friedhof mit denen in seinem Deck, dann mischt er sein Deck. Du kannst nur 1 „Austausch des Geistes“ pro Duell aktivieren.
   es: |-
