--- a/data/cards/25311006.yaml
+++ b/data/cards/25311006.yaml
@@ -80,6 +80,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   de:
   - set_number: ROTD-DE062
     set_name: Rise of the Duelist
@@ -94,6 +95,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: ROTD-FR062
     set_name: Rise of the Duelist
@@ -108,6 +110,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: ROTD-IT062
     set_name: Rise of the Duelist
@@ -122,6 +125,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: ROTD-PT062
     set_name: Rise of the Duelist
@@ -136,6 +140,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: ROTD-JP062
     set_name: Rise of the Duelist
