--- a/data/cards/34294855.yaml
+++ b/data/cards/34294855.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 诅咒之吸血鬼
 text:
   en: |-
-    When this card is destroyed by battle and sent to the Graveyard: You can pay 500 Life Points; Special Summon it during the Standby Phase of the next turn. When you do: It gains 500 ATK.
+    When this card is destroyed by battle and sent to the GY: You can pay 500 LP; Special Summon it during the Standby Phase of the next turn. If you do: It gains 500 ATK.
   de: |-
     Wenn diese Karte durch Kampf zerstört und auf den Friedhof gelegt wird: Du kannst 500 Life Points zahlen; beschwöre sie während der Standby Phase des nächsten Spielzugs als Spezialbeschwörung. Wenn du dies tust: Sie erhält 500 ATK.
   es: |-
