--- a/data/cards/41578483.yaml
+++ b/data/cards/41578483.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Relinquished" + 1 Effect Monster
-    Once per turn, when your opponent activates a monster effect (Quick Effect): You can target 1 Effect Monster your opponent controls or in their GY; equip that target to this card you control. This card gains ATK/DEF equal to that equipped monster's. Monsters with that equipped monster's name cannot attack, also their effects on the field and their activated effects are negated.
+    Once per turn, when your opponent activates a monster effect (Quick Effect): You can target 1 Effect Monster your opponent controls or in their GY; equip that target to this card you control. This card gains ATK/DEF equal to that equipped monster's. Monsters with that equipped monster's original name cannot attack, also their effects on the field and their activated effects are negated.
   de: |-
     „Aufgegeben“ + 1 Effektmonster
     Einmal pro Spielzug, wenn dein Gegner einen Monstereffekt aktiviert (Schnelleffekt): Du kannst 1 Effektmonster wählen, das dein Gegner kontrolliert oder das sich in seinem Friedhof befindet; rüste diese Karte, die du kontrollierst, mit dem gewählten Ziel aus. Diese Karte erhält ATK/DEF in Höhe der des ausrüstenden Monsters. Monster mit dem Namen des ausrüstenden Monsters können nicht angreifen, zusätzlich werden ihre Effekte auf dem Spielfeld und ihre aktivierten Effekte annulliert.
@@ -66,6 +66,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   de:
   - set_number: LED2-DE003
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -79,6 +80,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: LED2-FR003
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -92,6 +94,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: LED2-IT003
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -105,6 +108,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: LED2-PT003
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -118,6 +122,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: DP19-JP003
     set_name: 'Duelist Pack: Legend Duelist 2'
