--- a/data/cards/62320425.yaml
+++ b/data/cards/62320425.yaml
@@ -43,27 +43,27 @@ series:
 - Exchange of the Spirit
 sets:
   en:
-  - set_number: MAMA-EN???
+  - set_number: MAMA-EN028
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   de:
-  - set_number: MAMA-DE???
+  - set_number: MAMA-DE028
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   fr:
-  - set_number: MAMA-FR???
+  - set_number: MAMA-FR028
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   it:
-  - set_number: MAMA-IT???
+  - set_number: MAMA-IT028
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
   pt:
-  - set_number: MAMA-PT???
+  - set_number: MAMA-PT028
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
