--- a/data/cards/98715423.yaml
+++ b/data/cards/98715423.yaml
@@ -44,26 +44,31 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   de:
   - set_number: MAMA-DE029
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: MAMA-FR029
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: MAMA-IT029
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: MAMA-PT029
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: DP27-JP025
     set_name: 'Duelist Pack: Duelists of Pyroxene'
