--- a/data/cards/11317977.yaml
+++ b/data/cards/11317977.yaml
@@ -53,7 +53,10 @@ text:
     ②: 이 카드가 융합 소환의 소재가 되어 묘지로 보내졌을 경우에 발동할 수 있다. "문라이트 블랙 시프" 이외의, 자신의 엑스트라 덱의 앞면 표시의 "문라이트" 펜듈럼 몬스터 또는 자신 묘지의 "문라이트" 몬스터 1장을 고르고 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：可以把这张卡从手卡丢弃，从以下效果选择1个发动。●选「月光黒羊」以外的自己墓地1只「月光」怪兽加入手卡。●从卡组把1张「融合」加入手卡。②：这张卡成为融合召唤的素材送去墓地的场合才能发动。选「月光黒羊」以外的1只自己的额外卡组的表侧表示的「月光」灵摆怪兽或者自己墓地的「月光」怪兽加入手卡。
+    ①：从手牌将此卡舍弃，可从以下效果中选择1个发动。
+    ●挑选自己墓地"月光黑羊"以外的1只"月光"怪兽加入手牌。
+    ●从牌组将1张"融合"加入手牌。
+    ②：此卡作为融合召唤的素材被送至墓地的情况下可以发动。挑选1只自己额外牌组"月光黑羊"以外的表侧表示"月光"灵摆怪兽或自己墓地的"月光"怪兽加入手牌。
 card_type: Monster
 monster_type_line: Beast-Warrior / Effect
 attribute: DARK
@@ -106,6 +109,11 @@ sets:
     set_name: Dimension Box Limited Edition
     rarities:
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC173
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
