--- a/data/cards/11193246.yaml
+++ b/data/cards/11193246.yaml
@@ -12,7 +12,7 @@ name:
   ko: 문라이트 린카네이션 댄스
   ko_rr:
   zh-TW:
-  zh-CN: 月光轮回舞踊
+  zh-CN: 月光轮回舞蹈
 text:
   en: |-
     If a monster(s) you control is destroyed by battle or card effect: Add up to 2 "Lunalight" monsters from your Deck to your hand. You can only activate 1 "Lunalight Reincarnation Dance" per turn.
@@ -32,7 +32,7 @@ text:
     "문라이트 린카네이션 댄스"는 1턴에 1장밖에 발동할 수 없다. ① : 자신 필드의 몬스터가 전투 / 효과로 파괴되었을 경우에 발동할 수 있다. 덱에서 "문라이트" 몬스터를 2장까지 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    「月光轮回舞踊」在1回合只能发动1张。①：自己场上的怪兽被战斗·效果破坏的场合才能发动。从卡组把最多2只「月光」怪兽加入手卡。
+    此卡名的卡1回合仅可发动1张。①：自己场上的怪兽因战斗・效果被破坏的情况下可以发动。从牌组将最多2只"月光"怪兽加入手牌。
 card_type: Trap
 property: Normal
 series:
@@ -71,6 +71,11 @@ sets:
   ko:
   - set_number: SHVI-KR071
     set_name: Shining Victories
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC174
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
