--- a/data/cards/44095762.yaml
+++ b/data/cards/44095762.yaml
@@ -153,6 +153,10 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
+  - set_number: MAMA-EN115
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: MRD-138
     set_name: Metal Raiders
     rarities:
@@ -299,6 +303,10 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
+  - set_number: MAMA-DE115
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: MRD-F138
     set_name: Metal Raiders
@@ -421,6 +429,10 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
+  - set_number: MAMA-FR115
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: PMT-I138
     set_name: Metal Raiders
@@ -543,6 +555,10 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
+  - set_number: MAMA-IT115
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: PMT-P138
     set_name: Metal Raiders
@@ -628,6 +644,10 @@ sets:
     set_name: 'Egyptian God Deck: Slifer the Sky Dragon'
     rarities:
     - Common
+  - set_number: MAMA-PT115
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: ''
     set_name: Vol.7
