--- a/data/cards/09334391.yaml
+++ b/data/cards/09334391.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN114
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   de:
   - set_number: LED2-DE039
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -65,6 +69,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-DE114
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: LED2-FR039
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -78,6 +86,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR114
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: LED2-IT039
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -91,6 +103,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT114
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: LED2-PT039
     set_name: 'Legendary Duelists: Ancient Millennium'
@@ -104,6 +120,10 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-PT114
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: DP19-JP039
     set_name: 'Duelist Pack: Legend Duelist 2'
