--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -152,6 +152,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: MAMA-EN108
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: LOD-028
     set_name: Legacy of Darkness
     rarities:
@@ -267,6 +271,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: MAMA-DE108
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: DB2-FR147
     set_name: Dark Beginning 2
@@ -378,6 +386,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: MAMA-FR108
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: DB2-IT147
     set_name: Dark Beginning 2
@@ -489,6 +501,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: MAMA-IT108
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: YS13-PT029
     set_name: 'Super Starter: V for Victory'
@@ -555,6 +571,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: MAMA-PT108
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: SC-28
     set_name: Struggle of Chaos
