--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -149,6 +149,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-EN107
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: MFC-000
     set_name: Magician's Force
     rarities:
@@ -262,6 +266,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-DE107
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: CT2-FR004
     set_name: Collectible Tins 2005
@@ -367,6 +375,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-FR107
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: RDS-ITSE2
     set_name: 'Rise of Destiny: Special Edition'
@@ -468,6 +480,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-IT107
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: CT2-PT004
     set_name: Collectible Tins 2005
@@ -565,6 +581,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-PT107
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: G3-11
     set_name: 'Yu-Gi-Oh! Duel Monsters III: Tri-Holy God Advent Official Tournament Street Duel Legend of Power prize card'
