--- a/data/cards/43175858.yaml
+++ b/data/cards/43175858.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-EN112
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   de:
   - set_number: DRL2-DE023
     set_name: Dragons of Legend 2
@@ -72,6 +76,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-DE112
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: DRL2-FR023
     set_name: Dragons of Legend 2
@@ -89,6 +97,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-FR112
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: DRL2-IT023
     set_name: Dragons of Legend 2
@@ -106,6 +118,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-IT112
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: DRL2-PT023
     set_name: Dragons of Legend 2
@@ -123,6 +139,10 @@ sets:
     set_name: OTS Tournament Pack 14
     rarities:
     - Ultimate Rare
+  - set_number: MAMA-PT112
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: CPD1-JP023
     set_name: 'Collectors Pack: Duelist of Destiny Version'
