--- a/data/cards/47355498.yaml
+++ b/data/cards/47355498.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 王家长眠之谷
 text:
   en: |-
-    All "Gravekeeper's" monsters gain 500 ATK and DEF. Cards in the Graveyard cannot be banished. Negate any card effect that would move a card in the Graveyard to a different place. Negate any card effect that changes Types or Attributes in the Graveyard.
+    All "Gravekeeper's" monsters gain 500 ATK/DEF. Cards in the GY cannot be banished. Negate any card effect that would move a card in the GY to a different place. Negate any card effect that changes Types or Attributes in the GY.
   de: |-
     Alle „Grabwächter“-Monster erhalten 500 ATK und DEF. Karten im Friedhof können nicht verbannt werden. Annulliere alle Karteneffekte, die eine Karte im Friedhof an einen anderen Platz bewegen würden. Annulliere alle Karteneffekte, die Typen oder Eigenschaften im Friedhof ändern.
   es: |-
@@ -75,6 +75,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN109
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: PGD-084
     set_name: Pharaonic Guardian
     rarities:
@@ -120,6 +124,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MAMA-DE109
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: DR1-FR032
     set_name: Dark Revelation Volume 1
@@ -157,6 +165,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR109
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: DR1-IT032
     set_name: Dark Revelation Volume 1
@@ -194,6 +206,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT109
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: DR1-PT032
     set_name: Dark Revelation Volume 1
@@ -211,6 +227,10 @@ sets:
     set_name: Duelist Saga
     rarities:
     - Ultra Rare
+  - set_number: MAMA-PT109
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: 301-032
     set_name: The New Ruler
