--- a/data/cards/48179391.yaml
+++ b/data/cards/48179391.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-EN111
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   de:
   - set_number: LC03-DE001
     set_name: "Legendary Collection 3: Yugi's World"
@@ -62,6 +66,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-DE111
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: LC03-FR001
     set_name: "Legendary Collection 3: Yugi's World"
@@ -75,6 +83,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-FR111
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: LC03-IT001
     set_name: "Legendary Collection 3: Yugi's World"
@@ -88,6 +100,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-IT111
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: DRL3-PT070
     set_name: 'Dragons of Legend: Unleashed'
@@ -97,6 +113,10 @@ sets:
     set_name: 'Dragons of Legend: The Complete Series'
     rarities:
     - Ultra Rare
+  - set_number: MAMA-PT111
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: EP12-JP042
     set_name: Extra Pack 2012
