--- a/data/cards/74677422.yaml
+++ b/data/cards/74677422.yaml
@@ -130,6 +130,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-EN105
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: LOB-070
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -272,6 +276,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-DE105
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: LDD-F056
     set_name: Legend of Blue Eyes White Dragon
@@ -354,6 +362,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-FR105
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: LDD-I056
     set_name: Legend of Blue Eyes White Dragon
@@ -440,6 +452,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-IT105
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: LDB-P070
     set_name: Legend of Blue Eyes White Dragon
@@ -505,6 +521,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-PT105
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: ''
     set_name: Vol.3
