--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -194,6 +194,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-EN104
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: LOB-001
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -445,6 +449,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-DE104
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: LDD-F001
     set_name: Legend of Blue Eyes White Dragon
@@ -588,6 +596,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-FR104
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: LDD-I001
     set_name: Legend of Blue Eyes White Dragon
@@ -735,6 +747,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-IT104
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: LDB-P001
     set_name: Legend of Blue Eyes White Dragon
@@ -845,6 +861,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: MAMA-PT104
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: ''
     set_name: 'Starter Box: Theatrical Release'
