--- a/data/cards/89943723.yaml
+++ b/data/cards/89943723.yaml
@@ -90,6 +90,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: MAMA-EN106
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   - set_number: DTP1-EN005
     set_name: Duel Terminal - Preview Wave 1
     rarities:
@@ -148,6 +152,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: MAMA-DE106
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: POTD-FR001
     set_name: Power of the Duelist
@@ -190,6 +198,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: MAMA-FR106
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: POTD-IT001
     set_name: Power of the Duelist
@@ -236,6 +248,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: MAMA-IT106
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: SDHS-PT007
     set_name: HERO Strike Structure Deck
@@ -258,6 +274,10 @@ sets:
     rarities:
     - Common
     - Duel Terminal Normal Parallel Rare
+  - set_number: MAMA-PT106
+    set_name: Magnificent Mavens
+    rarities:
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: WJC-JP005
     set_name: Weekly Shōnen Jump 2006, Issue 2 promotional card
