--- a/data/cards/25311006.yaml
+++ b/data/cards/25311006.yaml
@@ -4,7 +4,7 @@ name:
   en: Triple Tactics Talent
   de: Talent der drei Taktiken
   es: Talento de Tácticas Triples
-  fr: Talent des Triples Tacitques
+  fr: Talent des Triples Tactiques
   it: Talento Tattiche Triple
   pt: Talento da Tática Tripla
   ja: <ruby>三<rt>さん</rt></ruby><ruby>戦<rt>せん</rt></ruby>の<ruby>才<rt>さい</rt></ruby>
@@ -37,7 +37,7 @@ text:
     ● Piochez 2 cartes.
     ● Jusqu'à la End Phase, prenez le contrôle d'1 monstre contrôlé par votre adversaire.
     ● Regardez la main de votre adversaire, et choisissez-en 1 carte à mélanger dans le Deck.
-    Vous ne pouvez activer qu'1 "Talent des Triples Tacitques" par tour.
+    Vous ne pouvez activer qu'1 "Talent des Triples Tactiques" par tour.
   it: |-
     Se il tuo avversario ha attivato l'effetto di un mostro durante la tua Main Phase in questo turno: attiva 1 di questi effetti;
     ● Pesca 2 carte.
