--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Gains 300 ATK for every "Dark Magician" or "Magician of Black Chaos" in the GYs.
   de: |-
-    Erhält 300 ATK für jeden „Dunkler Magier“ oder „Magier des Schwarzen Chaos“ im Friedhof.
+    Erhält für jeden „Dunkler Magier“ oder „Magier des Schwarzen Chaos“ in den Friedhöfen 300 ATK.
   es: |-
-    Gana 300 ATK por cada "Mago Oscuro" o "Mago del Caos Negro" en el Cementerio.
+    Gana 300 ATK por cada "Mago Oscuro" o "Mago del Caos Negro" en los Cementerios.
   fr: |-
-    Gagne 300 ATK pour chaque "Magicien Sombre" ou "Magicien du Chaos Sombre" dans le Cimetière.
+    Gagne 300 ATK pour chaque "Magicien Sombre" ou "Magicien du Chaos Sombre" dans les Cimetières.
   it: |-
-    Guadagna 300 ATK per ogni "Mago Nero" e "Mago del Chaos Oscuro" nel Cimitero.
+    Guadagna 300 ATK per ogni "Mago Nero" e "Mago del Chaos Oscuro" nei Cimiteri.
   pt: |-
-    Ganha 300 de ATK para cada "Mago Negro" ou "Mago do Caos das Trevas" no Cemitério.
+    Ganha 300 de ATK para cada "Mago Negro" ou "Mago do Caos das Trevas" nos Cemitérios.
   ja: |-
     ①：このカードの<ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>力<rt>りょく</rt></ruby>は、お<ruby>互<rt>たが</rt></ruby>いの<ruby>墓<rt>ぼ</rt></ruby><ruby>地<rt>ち</rt></ruby>の「ブラック・マジシャン」「マジシャン・オブ・ブラックカオス」の<ruby>数<rt>かず</rt></ruby>×３００アップする。
   ko: |-
