--- a/data/cards/47355498.yaml
+++ b/data/cards/47355498.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     All "Gravekeeper's" monsters gain 500 ATK/DEF. Cards in the GY cannot be banished. Negate any card effect that would move a card in the GY to a different place. Negate any card effect that changes Types or Attributes in the GY.
   de: |-
-    Alle „Grabwächter“-Monster erhalten 500 ATK und DEF. Karten im Friedhof können nicht verbannt werden. Annulliere alle Karteneffekte, die eine Karte im Friedhof an einen anderen Platz bewegen würden. Annulliere alle Karteneffekte, die Typen oder Eigenschaften im Friedhof ändern.
+    Alle „Grabwächter“-Monster erhalten 500 ATK/DEF. Karten im Friedhof können nicht verbannt werden. Annulliere alle Karteneffekte, die eine Karte im Friedhof an einen anderen Platz bewegen würden. Annulliere alle Karteneffekte, die Typen oder Eigenschaften im Friedhof ändern.
   es: |-
-    Todos los monstruos "Cuidador de Tumbas" ganan 500 ATK y DEF. Las cartas en el Cementerio no pueden ser desterradas. Niega cualquier efecto de carta que fuera a mover una carta en el Cementerio a un lugar diferente. Niega cualquier efecto de carta que cambie Tipos o Atributos en el Cementerio.
+    Todos los monstruos "Cuidador de Tumbas" ganan 500 ATK/DEF. Las cartas en el Cementerio no pueden ser desterradas. Niega cualquier efecto de carta que fuera a mover una carta en el Cementerio a un lugar diferente. Niega cualquier efecto de carta que cambie Tipos o Atributos en el Cementerio.
   fr: |-
     Tous les monstres "Protecteurs du Tombeau" gagnent 500 ATK/DEF. Les cartes dans le Cimetière ne peuvent pas être bannies. Annulez les effets de carte qui vont déplacer une carte dans le Cimetière à un autre endroit. Annulez les effets de carte qui changent les Types ou Attributs dans le Cimetière.
   it: |-
-    Tutti i mostri "Custode di Tombe" guadagnano 500 ATK e DEF. Le carte nel Cimitero non possono essere bandite. Annulla qualsiasi effetto di carta che sta per spostare una carta nel Cimitero in un posto diverso. Annulla qualsiasi effetto di carta che cambia Tipi o Attributi nel Cimitero.
+    Tutti i mostri "Custode di Tombe" guadagnano 500 ATK/DEF. Le carte nel Cimitero non possono essere bandite. Annulla qualsiasi effetto di carta che sta per spostare una carta nel Cimitero in un posto diverso. Annulla qualsiasi effetto di carta che cambia Tipi o Attributi nel Cimitero.
   pt: |-
-    Todos os monstros "do Coveiro" ganham 500 de ATK e DEF. Os cards no Cemitério não podem ser banidos. Negue qualquer efeito de card que moveria um card do Cemitério para um lugar diferente. Negue qualquer efeito de card que mude Tipos ou Atributos no Cemitério.
+    Todos os monstros "do Coveiro" ganham 500 de ATK/DEF. Os cards no Cemitério não podem ser banidos. Negue qualquer efeito de card que moveria um card do Cemitério para um lugar diferente. Negue qualquer efeito de card que mude Tipos ou Atributos no Cemitério.
   ja: |-
     ①：フィールドの「墓守」モンスターの攻撃力・守備力は５００アップする。②：このカードがフィールドゾーンに存在する限り、お互いに墓地のカードを除外できず、墓地のカードへ及ぶ効果は無効化され、適用されない。
   ko: |-
