--- a/data/cards/49202162.yaml
+++ b/data/cards/49202162.yaml
@@ -94,6 +94,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   de:
   - set_number: BLHR-DE046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -111,6 +112,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   fr:
   - set_number: BLHR-FR046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -128,6 +130,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   it:
   - set_number: BLHR-IT046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -145,6 +148,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   pt:
   - set_number: BLHR-PT046
     set_name: "Battles of Legend: Hero's Revenge"
@@ -162,6 +166,7 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+    - Ultra Rare (Pharaoh's Rare)
   ja:
   - set_number: LVP2-JP001
     set_name: LINK VRAINS Pack 2
