--- a/data/cards/75500286.yaml
+++ b/data/cards/75500286.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Banish 1 card from your Deck, face-up. During your 2nd Standby Phase after this card's activation, add that card to the hand.
   de: |-
-    Verbanne 1 Karte offen von deinem Deck. Während deiner 2. Standby Phase nach der Aktivierung dieser Karte, füge die Karte der Hand hinzu.
+    Verbanne 1 Karte offen von deinem Deck. Während deiner 2. Standby Phase nach der Aktivierung dieser Karte, füge jene Karte der Hand hinzu.
   es: |-
     Destierra 1 carta en tu Deck, boca arriba. Durante tu 2da. Standby Phase, después de la activación de esta carta, añade a la mano esa carta.
   fr: |-
