--- a/data/cards/48791583.yaml
+++ b/data/cards/48791583.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     「召喚師アレイスター」＋地属性モンスター
   ko: |-
-    "소환사 알레이스터" + 땅 속성 몬스터
+    "소환사 알레이스터" ＋ 땅 속성 몬스터
   zh-TW:
   zh-CN: |-
     「召唤师 阿莱斯特」＋地属性怪兽
