--- a/data/cards/50005218.yaml
+++ b/data/cards/50005218.yaml
@@ -8,7 +8,7 @@ name:
   it: Assaltatrice del Cielo Spazio Aereo - Area Zero
   pt: Força Celeste - Espaço Aéreo - Área Zero
   ja: <ruby>閃<rt>せん</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>空<rt>くう</rt></ruby><ruby>域<rt>いき</rt></ruby>－エリアゼロ
-  ja_romaji: Sentō Kūiki - Eria Zero
+  ja_romaji: Sentōkūiki - Eria Zero
   ko: 섬도공역－에리어제로
   ko_rr: Seomdogong-yeok - Erieojero
   zh-TW:
