--- a/data/cards/75364199.yaml
+++ b/data/cards/75364199.yaml
@@ -8,7 +8,7 @@ name:
   it: Distruzione Recirpoca Appelosata
   pt: Destruição Mútua Pelegurada
   ja: <ruby>相<rt>そう</rt></ruby><ruby>視<rt>し</rt></ruby><ruby>相<rt>そう</rt></ruby><ruby>殺<rt>さい</rt></ruby>
-  ja_romaji: Sōshi Sōsai
+  ja_romaji: Sōshisōsai
   ko: 상시상쇄
   ko_rr: Sangsisangswae
   zh-TW:
