--- a/data/cards/79850798.yaml
+++ b/data/cards/79850798.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Não pode ser Invocado por Invocação-Normal/Baixado. Você deve Invocá-lo por Invocação-Especial (da sua mão) ao não controlar nenhum card e não pode ser Invocado por Invocação-Especial de nenhuma outra forma. Você não pode conduzir sua Fase de Batalha no turno que Invocar este card por Invocação-Especial. Você não pode ativar cards ou efeitos, nem Baixar quaisquer cards. Durante cada uma das suas Fases de Apoio, destrua este card a não ser que você envie toda a sua mão para o Cemitério (min. 1).
   ja: |-
-    このカードは通常召喚できない。自分フィールド上にカードが存在しない場合のみ特殊召喚できる。このカードを特殊召喚するターン、自分はバトルフェイズを行えない。このカードがフィールド上に表側表示で存在する限り、自分は魔法・罠・効果モンスターの効果を発動できず、カードをセットする事もできない。このカードのコントローラーは自分のスタンバイフェイズ毎に手札を全て墓地へ送る。またはこのカードを破壊する。
+    このカードは通常召喚できない。自分フィールドにカードが存在しない場合のみ特殊召喚できる。このカードを特殊召喚するターン、自分はバトルフェイズを行えない。このカードのコントローラーは自分スタンバイフェイズ毎に手札を全て墓地へ送る。または墓地へ送らずにこのカードを破壊する。①：このカードがモンスターゾーンに存在する限り、自分は魔法・罠・モンスターの効果を発動できず、カードをセットできない。
   ko: |-
     이 카드는 일반 소환 / 세트할 수 없다. 자신 필드 위에 카드가 존재하지 않는 경우에만 특수 소환할 수 있다. 이 카드를 특수 소환하는 턴에, 자신은 배틀 페이즈를 실행할 수 없다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 자신은 마법 / 함정 / 효과 몬스터의 효과를 발동할 수 없으며, 카드를 세트할 수도 없다. 이 카드의 컨트롤러는 자신의 스텐바이 페이즈마다 패를 전부 묘지로 보낸다. 또는 이 카드를 파괴한다.
   zh-TW:
