--- a/data/cards/49121795.yaml
+++ b/data/cards/49121795.yaml
@@ -34,7 +34,7 @@ text:
     Uma vez por turno: você pode desassociar 1 Matéria Xyz deste card e, depois, escolher 1 monstro do Tipo Máquina que você controla; neste turno, ele pode atacar seu oponente diretamente e, além disso, outros monstros não podem atacar. Se este card em sua posse for destruído por um card do oponente (em batalha ou por um efeito de card) e enviado para o seu Cemitério: você pode adicionar 1 Monstro do Tipo Máquina de Nível 4 do seu Deck à sua mão.
   ja: |-
     機械族レベル４モンスター×２
-    ①：１ターンに１度、このカードのＸ素材を１つ取り除き、自分フィールドの機械族モンスター１体を対象として発動できる。このターン、自分はそのモンスターでしか攻撃できず、そのモンスターは直接攻撃できる。②：このカードが相手によって破壊され墓地へ送られた場合に発動できる。デッキから機械族・レベル４モンスター１体を手札に加える。
+    ①：１ターンに１度、このカードのＸ素材を１つ取り除き、自分フィールドの機械族モンスター１体を対象として発動できる。このターン、そのモンスター以外のモンスターは攻撃できず、そのモンスターは直接攻撃できる。②：このカードが相手によって破壊され墓地へ送られた場合に発動できる。デッキから機械族・レベル４モンスター１体を手札に加える。
   ko: |-
     기계족 레벨 4 몬스터 × 2
     ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고, 자신 필드의 기계족 몬스터 1장을 대상으로 하여 발동할 수 있다. 이 턴에, 자신은 그 몬스터로밖에 공격할 수 없으며, 그 몬스터는 직접 공격할 수 있다. ②: 이 카드가 상대에 의해 파괴되어 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 기계족 / 레벨 4 몬스터 1장을 패에 넣는다.
