--- a/data/cards/75286621.yaml
+++ b/data/cards/75286621.yaml
@@ -36,7 +36,7 @@ text:
     「召喚師アレイスター」＋光属性モンスター
     ①：１ターンに１度、モンスターの効果・魔法・罠カードが発動した時、そのカードと同じ種類（モンスター・魔法・罠）の手札を１枚墓地へ送って発動できる。その発動を無効にし除外する。
   ko: |-
-    "소환사 알레이스터" + 빛 속성 몬스터
+    "소환사 알레이스터" ＋ 빛 속성 몬스터
     ①: 1턴에 1번, 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때, 그 카드와 같은 종류(몬스터 / 마법 / 함정)의 패를 1장 묘지로 보내고 발동할 수 있다. 그 발동을 무효로 하고 제외한다.
   zh-TW:
   zh-CN: |-
