--- a/data/cards/85908279.yaml
+++ b/data/cards/85908279.yaml
@@ -34,9 +34,9 @@ text:
     Não pode ser destruído pelos efeitos de card do seu oponente. Seu oponente não pode escolher este card como alvo de efeitos de card. Este card pode atacar enquanto estiver com a face para cima em Posição de Defesa. Se o fizer, aplique seu ATK no cálculo de dano.
   ja: |-
     「召喚師アレイスター」＋水属性モンスター
-    ①：このカードは相手の効果の対象にならず、相手の効果では破壊されない。②：このカードは表側守備表示のままで攻撃できる。その場合、攻撃力の数値を適用してダメージ計算を行う。
+    ①：フィールドのこのカードは相手の効果の対象にならず、相手の効果では破壊されない。②：このカードは表側守備表示のままで攻撃できる。その場合、攻撃力の数値を適用してダメージ計算を行う。
   ko: |-
-    "소환사 알레이스터" + 물 속성 몬스터
+    "소환사 알레이스터" ＋ 물 속성 몬스터
     ①: 이 카드는 상대 효과의 대상이 되지 않으며, 상대 효과로는 파괴되지 않는다. ②: 이 카드는 앞면 수비 표시 그대로 공격할 수 있다. 그 경우, 공격력의 수치를 적용하고 데미지 계산을 실행한다.
   zh-TW:
   zh-CN: |-
