--- a/data/cards/00844056.yaml
+++ b/data/cards/00844056.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18319
+password: 844056
 name:
   en: Red Arrows
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：ＥＸモンスターゾーンの表側表示モンスターを２体まで対象として発動できる。そのモンスターをエンドフェイズまで除外する。
   ko:
   zh-TW:
   zh-CN:
@@ -39,7 +40,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 904975
-fake_password:
-- 100293098
