--- a/data/cards/25955749.yaml
+++ b/data/cards/25955749.yaml
@@ -9,7 +9,7 @@ name:
   pt: Força Celeste - Manobra - Bloqueio de Sinal!
   ja: <ruby>閃<rt>せん</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>術<rt>じゅつ</rt></ruby><ruby>式<rt>しき</rt></ruby>－ジャミングウェーブ
   ja_romaji: Sentōjutsushiki - Jamingu Wēbu
-  ko: 섬도술식-재밍웨이브
+  ko: 섬도술식－재밍웨이브
   ko_rr:
   zh-TW:
   zh-CN: 闪刀术式－干扰波
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分のメインモンスターゾーンにモンスターが存在しない場合、フィールドにセットされた魔法・罠カード１枚を対象として発動できる。そのカードを破壊する。その後、自分の墓地に魔法カードが３枚以上存在する場合、フィールドのモンスター１体を選んで破壊できる。
   ko: |-
-    ①: 자신의 메인 몬스터 존에 몬스터가 존재하지 않을 경우, 필드에 세트된 마법 / 함정 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다. 그 후, 자신의 묘지에 마법 카드가 3장 이상 존재할 경우, 필드의 몬스터 1장을 고르고 파괴할 수 있다.
+    ①: 자신 메인 몬스터 존에 몬스터가 존재하지 않을 경우, 필드에 세트된 마법 / 함정 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. 그 후, 자신 묘지에 마법 카드가 3장 이상 존재할 경우, 필드의 몬스터 1장을 고르고 파괴할 수 있다.
   zh-TW:
   zh-CN: |-
     ①：自己的主要怪兽区域没有怪兽存在的情况下，可以场上放置的1张魔法・陷阱卡为对象发动。破坏该卡。之后，自己墓地存在3张以上的魔法卡的情况下，可以挑选场上1只怪兽进行破坏。
