--- a/data/cards/36848764.yaml
+++ b/data/cards/36848764.yaml
@@ -1,5 +1,5 @@
-konami_id:
-password:
+konami_id: 18320
+password: 36848764
 name:
   en: Sweet Room-Maid
   de:
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：自分または相手の手札・デッキからカードが墓地へ送られた場合、自分または相手の墓地のカード１枚を対象として発動できる。そのカードを持ち主のデッキに戻す。
   ko:
   zh-TW:
   zh-CN:
@@ -37,7 +38,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 900388
-fake_password:
-- 100293099
