--- a/data/cards/00458748.yaml
+++ b/data/cards/00458748.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Ofereça como Tributo 1 monstro "Invokado(a)"; Invoque por Invocação-Especial 1 monstro "Invokado(a)" do seu Deck Adicional com um Atributo original diferente que o desse monstro. (Isso é considerado uma Invocação-Fusão.) Você só pode ativar 1 "O Livro da Lei" por turno.
   ja: |-
-    「法の聖典」は１ターンに１枚しか発動できない。①：自分フィールドの「召喚獣」モンスター１体をリリースして発動できる。リリースしたモンスターと元々の属性が異なる「召喚獣」モンスター１体を融合召喚扱いとしてエクストラデッキから特殊召喚する。
+    このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「召喚獣」モンスター１体をリリースして発動できる。リリースしたモンスターとは元々の属性が異なる「召喚獣」モンスター１体を融合召喚扱いとしてＥＸデッキから特殊召喚する。
   ko: |-
     "법의 성전"은 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 "소환수" 몬스터 1장을 릴리스하고 발동할 수 있다. 릴리스한 몬스터와 원래의 속성이 다른 "소환수" 몬스터 1장을 융합 소환으로 취급하여 엑스트라 덱에서 특수 소환한다.
   zh-TW:
