--- a/data/cards/11270236.yaml
+++ b/data/cards/11270236.yaml
@@ -33,8 +33,8 @@ text:
     1 monstro "Invokado(a)" + 1 monstro Invocado por Invocação-Especial do Deck Adicional
     Primeiro deve ser Invocado por Invocação-Fusão com as Matérias de Fusão acima. Enquanto estiver com a face para cima no campo, este card também é de Atributo TREVAS, TERRA, ÁGUA, FOGO e VENTO. Uma vez por turno (Efeito Rápido): você pode escolher 1 monstro "Invokado(a)" que você controla ou no seu Cemitério; bana-o e todos os monstros que seu oponente controla com o mesmo Atributo que esse monstro.
   ja: |-
-    「召喚獣」モンスター＋エクストラデッキから特殊召喚されたモンスター
-    このカードは上記のカードを融合素材にした融合召喚でのみエクストラデッキから特殊召喚できる。①：このカードがモンスターゾーンに存在する限り、このカードの属性は「闇」「地」「水」「炎」「風」としても扱う。②：１ターンに１度、自分のフィールド・墓地の「召喚獣」モンスター１体を対象として発動できる。そのモンスター及びそのモンスターと同じ属性を持つ相手フィールドのモンスターを全て除外する。この効果は相手ターンでも発動できる。
+    「召喚獣」モンスター＋ＥＸから特殊召喚されたモンスター
+    このカードは上記のカードを融合素材にした融合召喚でのみＥＸデッキから特殊召喚できる。①：このカードがモンスターゾーンに存在する限り、このカードの属性は「闇」「地」「水」「炎」「風」としても扱う。②：１ターンに１度、自分のフィールド・墓地の「召喚獣」モンスター１体を対象として発動できる。そのモンスター及びそのモンスターと同じ属性を持つ相手フィールドのモンスターを全て除外する。この効果は相手ターンでも発動できる。
   ko: |-
     "소환수" 몬스터 ＋ 엑스트라 덱에서 특수 소환된 몬스터
     이 카드는 상기의 카드를 융합 소재로 한 융합 소환으로만 엑스트라 덱에서 특수 소환할 수 있다. ①: 이 카드가 몬스터 존에 존재하는 한, 이 카드의 속성은 "어둠" "땅" "물" "화염" "바람"으로도 취급한다. ②: 1턴에 1번, 자신의 필드 / 묘지의 "소환수" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터 및 그 몬스터와 같은 속성을 가지는 상대 필드의 몬스터를 전부 제외한다. 이 효과는 상대 턴에도 발동할 수 있다.
