--- a/data/cards/24010609.yaml
+++ b/data/cards/24010609.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Uma vez por turno: você pode escolher 1 outro card que você controla; envie esse card para o Cemitério e, além disso, pelo resto deste turno, seu oponente não pode ativar cards ou efeitos em resposta à ativação dos seus Cards de Magia (mesmo que este card deixe o campo). (Você só pode se aproveitar do efeito anterior uma vez por turno.) Uma vez por turno, durante a Fase Final: você pode Baixar Magias "Força Celeste" com nomes diferentes do seu Cemitério, até o número de Cards de Magia "Força Celeste" que você ativou neste turno enquanto este card estava com a face para cima no seu campo, mas bana-as quando elas deixarem o campo.
   ja: |-
-    ①：１ターンに１度、このカード以外の自分フィールドのカード１枚を対象として発動できる。このターン、自分の魔法カードの発動に対して相手は魔法・罠・モンスターの効果を発動できない。さらに、対象のカードは墓地へ送られる。②：自分・相手のエンドフェイズに発動できる。このターン、このカードが表側表示で存在する間に自分が発動した「閃刀」魔法カードの数まで自分の墓地の「閃刀」魔法カードを選び、自分フィールドにセットする（同名カードは１枚まで）。この効果でセットしたカードはフィールドから離れた場合に除外される。
+    ①：１ターンに１度、このカード以外の自分フィールドのカード１枚を対象として発動できる。このターン、自分の魔法カードの発動に対して相手は魔法・罠・モンスターの効果を発動できない。さらに、対象のカードを墓地へ送る。②：自分・相手のエンドフェイズに発動できる。このターン、このカードが表側表示で存在する間に自分が発動した「閃刀」魔法カードの数まで自分の墓地の「閃刀」魔法カードを選び、自分フィールドにセットする（同名カードは１枚まで）。この効果でセットしたカードはフィールドから離れた場合に除外される。
   ko: |-
     ①: 1턴에 1번, 이 카드 이외의 자신 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 이 턴에, 자신의 마법 카드의 발동에 대하여 상대는 마법 / 함정 / 몬스터의 효과를 발동할 수 없다. 추가로, 대상의 카드는 묘지로 보내진다. ②: 자신 / 상대의 엔드 페이즈에 발동할 수 있다. 이 턴에, 이 카드가 앞면 표시로 존재하는 동안에 자신이 발동한 "섬도" 마법 카드의 수까지 자신 묘지의 "섬도" 마법 카드를 고르고, 자신 필드에 세트한다(같은 이름의 카드는 1장까지). 이 효과로 세트한 카드는 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
