--- a/data/cards/34365442.yaml
+++ b/data/cards/34365442.yaml
@@ -50,8 +50,8 @@ text:
     ●フィールドのカードを破壊する魔法・罠・モンスターの効果が発動した時に発動できる。その効果を無効にする。
   ko: |-
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 "키스킬" 몬스터 또는 "리일라" 몬스터 1장을 릴리스하고, 이하의 효과에서 1개를 선택하여 발동할 수 있다.
-    ● 자신 필드의 "키스킬" 몬스터 또는 "리일라" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력은 턴 종료시까지, 릴리스한 몬스터의 원래 공격력만큼 올린다.
-    ● 필드의 카드를 파괴하는 마법 / 함정 / 몬스터의 효과가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 한다.
+    ●자신 필드의 "키스킬" 몬스터 또는 "리일라" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력은 턴 종료시까지, 릴리스한 몬스터의 원래 공격력만큼 올린다.
+    ●필드의 카드를 파괴하는 마법 / 함정 / 몬스터의 효과가 발동했을 때에 발동할 수 있다. 그 효과를 무효로 한다.
   zh-TW:
   zh-CN: |-
     此卡名的①效果1回合仅可使用1次。①：解放自己场上的1只“姬丝吉尔”怪兽或“璃拉”怪兽，可从以下效果中选择1个发动。
