--- a/data/cards/51227866.yaml
+++ b/data/cards/51227866.yaml
@@ -9,7 +9,7 @@ name:
   pt: Força Celeste - Mecha - Canhão Tubarão
   ja: <ruby>閃<rt>せん</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>機<rt>き</rt></ruby>－シャークキャノン
   ja_romaji: Sentōki - Shāku Kyanon
-  ko: 섬도기-샤크캐논
+  ko: 섬도기－샤크캐논
   ko_rr:
   zh-TW:
   zh-CN: 闪刀机－鲨鱼加农炮
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：自分のメインモンスターゾーンにモンスターが存在しない場合、相手の墓地のモンスター１体を対象として発動できる。そのモンスターを除外する。自分の墓地に魔法カードが３枚以上存在する場合、除外せずにそのモンスターを自分フィールドに特殊召喚できる。この効果で特殊召喚したモンスターは攻撃できない。
   ko: |-
-    ①: 자신의 메인 몬스터 존에 몬스터가 존재하지 않을 경우, 상대의 묘지의 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 제외한다. 자신의 묘지에 마법 카드가 3장 이상 존재할 경우, 제외하지 않고 그 몬스터를 자신 필드에 특수 소환할 수 있다. 이 효과로 특수 소환한 몬스터는 공격할 수 없다.
+    ①: 자신 메인 몬스터 존에 몬스터가 존재하지 않을 경우, 상대 묘지의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 제외한다. 자신 묘지에 마법 카드가 3장 이상 존재할 경우, 제외하지 않고 그 몬스터를 자신 필드에 특수 소환할 수 있다. 이 효과로 특수 소환한 몬스터는 공격할 수 없다.
   zh-TW:
   zh-CN: |-
     ①：自己的主要怪兽区域不存在怪兽的情况下，可以对手墓地的1只怪兽为对象发动。将该怪兽除外。自己墓地存在3张以上的魔法卡的情况下，可以不除外而将那只怪兽特殊召唤至自己场上。用这个效果特殊召唤的怪兽不可攻击。
