--- a/data/cards/73810864.yaml
+++ b/data/cards/73810864.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Seu oponente deve pagar 500 PV para declarar um ataque. Se este card for Invocado por Invocação-Normal ou Especial e você não controlar nenhum outro monstro: você pode Invocar por Invocação-Especial 1 monstro "Ki-sikil" da sua mão ou do Deck. Você só pode usar este efeito de "Live☆Gêmea Lil-la" uma vez por turno.
   ja: |-
-    このカード名の①の効果は１ターンに１度しか使用できない。①：自分フィールドに他のモンスターが存在せず、このカードが召喚・特殊召喚に成功した場合に発動できる。手札・デッキから「キスキル」モンスター１体を特殊召喚する。②：このカードがモンスターゾーンに存在する限り、相手は５００ＬＰを払わなければ攻撃宣言できない。
+    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合、自分フィールドに他のモンスターが存在しなければ発動できる。手札・デッキから「キスキル」モンスター１体を特殊召喚する。②：このカードがモンスターゾーンに存在する限り、相手は５００ＬＰを払わなければ攻撃宣言できない。
   ko: |-
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 다른 몬스터가 존재하지 않으며, 이 카드가 일반 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 패 / 덱에서 "키스킬" 몬스터 1장을 특수 소환한다. ②: 이 카드가 몬스터 존에 존재하는 한, 상대는 500 LP를 지불하지 않으면 공격 선언할 수 없다.
   zh-TW:
