--- a/data/cards/99550630.yaml
+++ b/data/cards/99550630.yaml
@@ -9,7 +9,7 @@ name:
   pt: Força Celeste - Manobra - Pós-combustão!
   ja: <ruby>閃<rt>せん</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>術<rt>じゅつ</rt></ruby><ruby>式<rt>しき</rt></ruby>－アフターバーナー
   ja_romaji: Sentōjutsushiki - Afutābānā
-  ko: 섬도술식-애프터버너
+  ko: 섬도술식－애프터버너
   ko_rr: Seomdosulsin - Aepeuteobeoneo
   zh-TW:
   zh-CN: 闪刀术式－烈火重燃
