--- a/data/cards/03912064.yaml
+++ b/data/cards/03912064.yaml
@@ -6,7 +6,7 @@ name:
   es: El Mercurio Activador
   fr: Mercure l'Excursionniste
   it: Il Viaggiante Mercurio
-  pt: O Saltitante Mércurio
+  pt: O Saltitante Mercúrio
   ja: <ruby>Ｔｈｅ ｔｒｉｐｐｉｎｇ ＭＥＲＣＵＲＹ<rt>ザ・トリッピング・マーキュリー</rt></ruby>
   ja_romaji: Za Torippingu Mākyurī
   ko: The tripping MERCURY
