--- a/data/cards/36609518.yaml
+++ b/data/cards/36609518.yaml
@@ -8,7 +8,7 @@ name:
   it: Evil★Gemella Lil-la
   pt: Evil★Gêmea Lil-la
   ja: <ruby>Ｅｖｉｌ★Ｔｗｉｎ<rt>イビルツイン</rt></ruby> リィラ
-  ja_romaji: Ibiru Tsuin Rira
+  ja_romaji: Ibiru Tsuin Ryira
   ko: <ruby>Evil★Twin<rt>이빌트윈</rt></ruby> 리일라
   ko_rr:
   zh-TW:
