--- a/data/cards/62098216.yaml
+++ b/data/cards/62098216.yaml
@@ -8,7 +8,7 @@ name:
   it: Evil★Gemelle Ki-sikil & Lil-la
   pt: Evil★Gêmeas Ki-sikil & Lil-la
   ja: <ruby>Ｅｖｉｌ★Ｔｗｉｎｓ<rt>イビルツインズ</rt></ruby> キスキル・リィラ
-  ja_romaji: Ibiru Tsuinzu Kisukiru Rira
+  ja_romaji: Ibiru Tsuinzu Kisukiru Ryira
   ko: <ruby>Evil★Twins<rt>이빌트윈스</rt></ruby> 키스킬 리일라
   ko_rr:
   zh-TW:
