--- a/data/cards/73810864.yaml
+++ b/data/cards/73810864.yaml
@@ -8,7 +8,7 @@ name:
   it: Live☆Gemella Lil-la
   pt: Live☆Gêmea Lil-la
   ja: <ruby>Ｌｉｖｅ☆Ｔｗｉｎ<rt>ライブツイン</rt></ruby> リィラ
-  ja_romaji: Raibu Tsuin Rīra
+  ja_romaji: Raibu Tsuin Ryira
   ko: <ruby>Live☆Twin<rt>라이브트윈</rt></ruby> 리일라
   ko_rr:
   zh-TW:
